Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Iadc1f19fdc218275b9886e94e28a12bcc46568d2

--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Ляво ухо: Сдвояване"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Настройки за слуховия апарат"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Пряк път, съвместимост със слухови апарати"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Предварително зададени"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Предварително зададено"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Предварително зададените настройки не бяха актуализирани"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудиоизход"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Всичко за аудиоизхода"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Отказ"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Не сега"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Приемам"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Още"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Отключване с лицето ви"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Имайте предвид следното"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Използвайте отпечатъка си, за да отключвате телефона си или да одобрявате покупки.\n\nЗабележка: Не можете да отключвате това устройство с отпечатъка си. За повече информация се свържете с администратора на организацията си."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Отказ"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Не сега"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Приемам"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Да се пропусне ли отпечатъкът?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Настройването на отпечатък отнема само една или две минути. Ако пропуснете тази стъпка, можете да добавите отпечатъка си по-късно от настройките."</string>
@@ -577,9 +575,8 @@
     <string name="private_space_auto_lock_title" msgid="8663409382910601261">"Авт. заключване на частното пространство"</string>
     <string name="private_space_auto_lock_page_summary" msgid="8679844515655838654">"Частното ви пространство може да се заключва автоматично, ако не сте използвали устройството си за определен период от време"</string>
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"При всяко заключване на устройството"</string>
-    <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 мин. до авт. изключване на екрана"</string>
+    <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 мин. след авт. изключване на екрана"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Само след рестартиране на устройството"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Ако използвате различно заключване за частното пространство, може да се наложи да потвърдите, че сте вие, за да отваряте приложенията в него."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Скриване на частното пространство"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Скриване на частното пространство, когато е заключено"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"За да бъде тайно частното пространство на устройството ви, можете да го скриете от списъка с приложения"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Настройване"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Частно пространство"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Скривайте или заключвайте частните приложения в отделно пространство. За допълнителна сигурност използвайте специален профил в Google."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Начин на работа"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Създаване на профил в Google за пространството ви"</b>\n"Ако използвате отделен профил, синхронизираните файлове, снимки и имейли няма да се показват извън пространството ви"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Задаване на заключване"</b>\n"Заключете пространството си, за да не може да бъде отваряно от други хора"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Инсталиране на приложения"</b>\n"Инсталирайте приложенията, които искате да запазите частни в пространството си"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Имайте предвид следното"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Спиране на приложенията при заключване на пространството ви"</b>\n"Когато заключите пространството си, приложенията в него се спират и няма да получавате известия от тях"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Когато частното ви пространство е заключено, приложенията в него няма да се показват в мениджъра на разрешенията, таблото за управление на поверителността и други настройки.\n\nЧастното ви пространство не може да бъде преместено на ново устройство. В такъв случай ще трябва да настроите друго частно пространство.\n\nВсеки, който свърже устройството ви с компютър или инсталира опасни приложения на него, би могъл да осъществи достъп до частното ви пространство."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Когато заключите частното си пространство, приложенията в него се спират и няма да получавате известия от тях.\n\nКогато частното пространство е заключено, приложенията в него няма да се показват в мениджъра на разрешенията, таблото за управление на поверителността и други настройки.\n\nЧастното ви пространство не може да бъде възстановено на ново устройство. В такъв случай ще трябва да настроите друго пространство.\n\nВсеки, който свърже устройството ви с компютър или инсталира злонамерени приложения на него, би могъл да осъществи достъп до частното ви пространство."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Научете повече за частното пространство"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Това ще отнеме известно време"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Частното пространство се настройва…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Можете да зададете нова опция за заключване специално за частното пространство или да използвате тази, с която отключвате устройството си"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Използване на закл. на екрана"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Избиране на нова опция за заключване"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Една секунда…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Готово!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"За да намерите частното си пространство, отворете списъка с приложения и превъртете надолу"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Готово"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Задайте ПИН код за частното пространство"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Задайте парола за частното пространство"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Задайте фигура за частното пространство"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Създайте си профил в Google, за да запазите поверителността на данните си"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"На следващия екран можете да влезете в профил, за да използвате частното си пространство"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Създайте си специален профил, така че данните да не се показват извън частното пространство, като например:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Синхронизирани снимки, файлове, имейли, контакти, събития от календара и други данни"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"История на изтеглянията и препоръки за приложения"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"История на сърфиране, отметки и запазени пароли"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Предложено съдържание, свързано с активността ви в приложенията в частното пространство"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Разбрах"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Заключване"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Скриване"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Можете да добавите до <xliff:g id="COUNT">%d</xliff:g> отпечатъка"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Системен сертификат"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Фиксиране на сертификати"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Подробно за мрежата"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Тази мрежа използва по-стар протокол за сигурност, наречен WEP, който не е толкова надежден"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Подмрежова маска"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Име на сървъра"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Тип"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"MAC адрес за Wi‑Fi на устройството"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Адрес на Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Сериен номер"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Време на работа"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Дата на производство"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Дата на първото използване"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Брой цикли"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Докосване долу вдясно"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"За още опции докоснете долния десен ъгъл на сензорния панел"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Скорост на курсора"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Жестове със сензорния панел: Урок"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"тракпад, мишка, курсор, превъртане, плъзгане, кликване с десния бутон, кликване, показалец"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"кликване с десния бутон, докосване"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Добавяне на календар"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Използване на календара ви"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"График"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"График"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Заглуш. на телефона в опр. моменти"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Правила за „Не безпокойте“"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Активиране на режима „Само будилници“ за един час (до {time})}other{Активиране на режима „Само будилници“ за # часа (до {time})}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Активиране на режима „Само будилници“ до <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Активиране на режима „Прекъсване винаги“"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Предупреждение"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Затваряне"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Отзиви за устройството"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Лява"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Дясно"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Калъф"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Батерия"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Панел за настройки"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Принудително задаване на настолен режим"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Принудително задаване на експерименталния настолен режим на алтернативни дисплеи"</string>
