--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"キャンセル"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"後で"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"同意する"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"もっと見る"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"顔認証でロックを解除"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"注意事項"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"指紋を使ってスマートフォンのロック解除や購入の承認を行えるようにします。\n\n注: 指紋を使ってこのデバイスのロックを解除することはできません。詳しくは、組織の管理者にお問い合わせください。"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"キャンセル"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"後で"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"同意する"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"指紋の設定をスキップしますか？"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"指紋の設定にかかる時間は 1～2 分です。スキップした場合は、後で設定から指紋を追加できます。"</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"デバイスのロック時は毎回"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"画面が自動消灯してから 5 分後"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"デバイスの再起動後のみ"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"プライベート スペース用に別のロックを使用するには、プライベート スペースでアプリを開くための本人確認が必要となることがあります。"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"プライベート スペースを非表示にする"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"ロックされているプライベート スペースを非表示にする"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"プライベート スペースがデバイスにあることを秘密にするために、アプリのリストで非表示にできます"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"設定"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"プライベート スペース"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"隔離スペースでプライベート アプリを非表示またはロックできます。セキュリティを強化するには、専用の Google アカウントを使用します。"</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"仕組み"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"スペース用の Google アカウントを作成する"</b>\n"専用のアカウントを使用することで、同期済みのファイル、写真、メールがスペースの外部で表示されないようにできます"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ロックを設定する"</b>\n"スペースをロックして、他のユーザーが開けないようにできます"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"アプリをインストールする"</b>\n"スペース内で非公開にするアプリをインストールします"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"注意事項"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"スペースをロックするとアプリが停止する"</b>\n"スペースをロックするとアプリが停止して、アプリからの通知が届かなくなります"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"プライベート スペースがロックされている場合、プライベート スペースにあるアプリは、権限マネージャ、プライバシー ダッシュボード、その他の設定に表示されません。\n\nプライベート スペースを新しいデバイスに移動することはできません。別のデバイスで使用したい場合は、別のプライベート スペースを設定する必要があります。\n\nお使いのデバイスをパソコンに接続したり、デバイスに有害なアプリをインストールしたりしたユーザーが、あなたのプライベート スペースにアクセスできる可能性があります。"</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"スペースをロックするとプライベート スペース内のアプリが停止して、アプリからの通知が届かなくなります。\n\nプライベート スペースがロックされている場合、プライベート スペースにあるアプリは、権限マネージャ、プライバシー ダッシュボード、その他の設定に表示されません。\n\nプライベート スペースを新しいデバイスに復元することはできません。別のデバイスで使用したい場合は、別のスペースを設定する必要があります。\n\nあなたのデバイスをパソコンに接続したり、あなたのデバイスに悪意のあるアプリをインストールしたりしたユーザーが、あなたのプライベート スペースにアクセスできる可能性があります。"</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"プライベート スペースの詳細"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"しばらくお待ちください"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"プライベート スペースを設定しています…"</string>
@@ -633,7 +624,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"プライベート スペース専用のロックを新しく設定するか、デバイスのロック解除と同じロックを使用することができます"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"画面ロックを使用"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"新しいロックを設定"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"お待ちください…"</string>
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"お待ちください…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"設定完了"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"プライベート スペースを探すには、アプリのリストに移動してから下にスクロールします"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"完了"</string>
@@ -647,14 +638,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"プライベート スペースの PIN を設定"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"プライベート スペースのパスワードの設定"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"プライベート スペースのパターンを設定"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"データのプライバシーを保護するために Google アカウントを作成してください"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"次の画面で、プライベート スペースで使用するアカウントにログインできます"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"専用のアカウントを作成して、以下のようなデータがプライベート スペースの外部で表示されないようにします: "</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"同期済みの写真、ファイル、メール、連絡先、カレンダーの予定、その他のデータ"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"アプリのダウンロード履歴とおすすめ"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"閲覧履歴、ブックマーク、保存したパスワード"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"プライベート スペース アプリでのアクティビティに関連したおすすめのコンテンツ"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"OK"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ロック"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"非表示"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"最大で <xliff:g id="COUNT">%d</xliff:g> 件の指紋を追加できます"</string>
@@ -1065,8 +1048,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"システムの証明書"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"証明書の固定"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ネットワークの詳細"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"このネットワークは安全性の低い旧式のセキュリティ プロトコルである WEP を使用しています"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"サブネット マスク"</string>
     <string name="server_name_title" msgid="7257095185810299066">"サーバー名"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"タイプ"</string>
@@ -1938,6 +1920,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"右下をタップ"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"タッチパッドの右下をタップすると他のオプションが表示されます"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"ポインタの速度"</string>
+    <string name="pointer_fill_style" msgid="8413840032931637595">"ポインターの塗りつぶしスタイル"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"ポインターの塗りつぶしを黒色に変更"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"ポインターの塗りつぶしを緑色に変更"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"ポインターの塗りつぶしを黄色に変更"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"ポインターの塗りつぶしを桃色に変更"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"ポインターの塗りつぶしを青色に変更"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"タッチパッド操作を見る"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"トラックパッド, マウス, カーソル, スクロール, スワイプ, 右クリック, クリック, ポインタ"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"右クリック, タップ"</string>
@@ -3346,6 +3334,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"カレンダーの追加"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"カレンダーを使用する"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"スケジュール"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"スケジュール"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"一時的にスマートフォンを消音"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"サイレント モード ルールの設定"</string>
@@ -3810,6 +3804,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{{time}まで1時間、アラームのみに変更します}other{{time}まで#時間、アラームのみに変更します}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"<xliff:g id="FORMATTEDTIME">%1$s</xliff:g>までアラームのみに変更します"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"常に割り込みに変更します"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"警告"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"閉じる"</string>
     <string name="device_feedback" msgid="5351614458411688608">"このデバイスについてフィードバックを送信"</string>
@@ -4793,8 +4793,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"左"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"右"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"ケース"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"バッテリー"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"設定パネル"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"デスクトップ モードに強制的に切り替え"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"セカンダリ ディスプレイで試験運用版デスクトップ モードに強制的に切り替えます"</string>
