--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Bind linkeroor saam"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Gehoortoestelinstellings"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Kortpad, gehoortoestel-versoenbaarheid"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Voorafstellings"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Voorafstelling"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Kon nie voorafstelling opdateer nie"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Oudio-uitvoer"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Meer oor oudio-uitvoer"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Kanselleer"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Nie nou nie"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Ek stem in"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Meer"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Ontsluit met jou gesig"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Hou in gedagte"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Gebruik jou vingerafdruk om jou foon te ontsluit of aankope goed te keur.\n\nLet wel: Jy kan nie jou vingerafdruk gebruik om hierdie toestel te ontsluit nie. Gebruik jou organisasie se administrateur vir meer inligting."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Kanselleer"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Nie nou nie"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Ek stem in"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Slaan vingerafdruk oor?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Vingerafdrukopstelling neem net \'n minuut of twee. As jy dit oorslaan, kan jy jou vingerafdruk later in instellings byvoeg."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Elke keer as die toestel sluit"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 minute ná skermuitteltyd"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Net nadat toestel herbegin het"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"As jy ’n ander slot vir jou privaat ruimte gebruik, sal jy dalk moet verifieer dat dit jy is om apps in jou privaat ruimte oop te maak."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Versteek privaat ruimte"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Versteek privaat ruimte wanneer dit gesluit is"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Jy kan privaat ruimte op jou applys versteek as jy nie wil hê ander mense moet weet dat jy dit op jou toestel het nie"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Stel op"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privaat ruimte"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Versteek of sluit privaat apps op ’n aparte plek. Gebruik ’n toegewyde Google-rekening vir ekstra sekuriteit."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Hoe dit werk"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Skep ’n Google-rekening vir jou ruimte"</b>\n"As jy ’n toegewyde rekening gebruik, help dit om te verhoed dat gesinkroniseerde lêers, foto\'s en e-posse buite jou ruimte verskyn"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Stel ’n slot op"</b>\n"Sluit jou ruimte om te keer dat ander mense dit oopmaak"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Installeer apps"</b>\n"Installeer apps wat jy privaat in jou ruimte wil hou"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Hou in gedagte"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Apps stop wanneer jy jou ruimte sluit"</b>\n"Wanneer jy jou ruimte sluit, word apps in jou ruimte gestop en sal jy nie kennisgewing van hulle af ontvang nie"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Apps in jou privaat ruimte sal nie in toestemmingbestuurder, privaatheidkontroleskerm en ander instellings verskyn wanneer jou privaat ruimte gesluit is nie.\n\nJou privaat ruimte kan nie na ’n nuwe toestel geskuif word nie. Jy sal ’n ander privaat ruimte moet opstel as jy dit op ’n ander toestel wil gebruik.\n\nEnigiemand wat jou toestel aan ’n rekenaar koppel of skadelike apps op jou toestel installeer, sal moontlik toegang tot jou privaat ruimte kan kry."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Wanneer jy jou ruimte sluit, word apps in jou privaat ruimte gestop en sal jy nie kennisgewings van hulle ontvang nie.\n\nApps in jou privaat ruimte sal nie in toestemmingbestuurder, privaatheidkontroleskerm en ander instellings verskyn wanneer jou privaat ruimte gesluit is nie.\n\nJou privaat ruimte kan nie na ’n nuwe toestel teruggestel word nie. Jy sal ’n ander ruimte moet opstel as jy dit op ’n ander toestel wil gebruik.\n\nEnigiemand wat jou toestel aan ’n rekenaar koppel of kwaadwillige apps op jou toestel installeer, sal moontlik toegang tot jou privaat ruimte kan kry."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Meer inligting oor privaat ruimte"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Dit sal ’n paar oomblikke neem"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Stel tans privaat ruimte op …"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Jy kan ’n nuwe slot net vir privaat ruimte stel, of dieselfde slot gebruik wat jy gebruik om jou toestel te ontsluit"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Gebruik skermslot"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Kies nuwe slot"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Net ’n oomblik …"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Gereed!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Gaan na jou appslys en rollees af om jou privaat ruimte te kry"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Klaar"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Stel \'n PIN vir jou privaat ruimte"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Stel \'n wagwoord vir jou privaat ruimte"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Stel \'n patroon vir jou privaat ruimte"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Skep ’n Google-rekening om te help om jou data privaat te hou"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Jy kan op die volgende skerm by ’n rekening aanmeld om saam met jou privaat ruimte te gebruik"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Skep ’n toegewyde rekening om te help keer dat data buite privaat ruimte verskyn, soos:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Gesinkroniseerde foto’s, lêers, e-posse, kontakte, kalendergeleenthede en ander data"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Appaflaaigeskiedenis en -aanbevelings"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Blaaigeskiedenis, boekmerke en gestoorde wagwoorde"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Voorgestelde inhoud wat met jou aktiwiteit in privaatruimte-apps verband hou"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Het dit"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Sluit"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Versteek"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Jy kan tot <xliff:g id="COUNT">%d</xliff:g> vingerafdrukke byvoeg"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Stelselsertifikaat"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Sertifikaatstawing"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Netwerkbesonderhede"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Hierdie netwerk gebruik ’n ouer sekuriteitprotokol genaamd BEP, wat minder veilig is"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Subnetmasker"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Bedienernaam"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tipe"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Toestel se wi-fi-MAC-adres"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth-adres"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Reeksnommer"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Gebruiktyd"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Vervaardigingdatum"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Datum van eerste gebruik"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Siklustelling"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Tik onder regs"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Tik op die raakpaneel se hoek onder regs vir meer opsies"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Wyserspoed"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Leer raakpaneelgebare"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"stuurpaneel, stuurpaneel, muis, skermpyltjie, rollees, swiep, regsklik, klik, wyser"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"regsklik, tik"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Voeg ’n kalender by"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Gebruik jou kalender"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Skedule"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Skedule"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Maak foon op sekere tye stil"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Stel Moenie Steur Nie-reëls"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Verandering aan wekkers vir slegs een uur tot {time}}other{Verandering aan wekkers vir slegs # uur tot {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Verander tot <xliff:g id="FORMATTEDTIME">%1$s</xliff:g> na net wekkers"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Verander na onderbreek altyd"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Waarskuwing"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Maak toe"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Stuur terugvoer oor hierdie toestel"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Links"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Regs"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Houer"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Battery"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Instellingspaneel"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Dwangrekenaarmodus"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Verplig eksperimentele rekenaarmodus op sekondêre skerms"</string>
