--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"የግራ ጆሮን ያጣምሩ"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"የመስማት ችሎታ መሣሪያ ቅንብሮች"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"አቋራጭ፣ የመስሚያ ረዳት ተኳዃኝነት"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"ቅድመ-ቅምጦች"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"ቅድመ-ቅምጥ"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"ቅድመ-ቅምጥን ማዘመን አልተቻለም"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"የኦዲዮ ውጽዓት"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"ስለኦዲዮ ውፅዓት"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ይቅር"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"አሁን አይደለም"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"እስማማለሁ"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ተጨማሪ"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"በመልክዎ ይክፈቱ"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ከግምት ውስጥ ያስገቡ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"የእርስዎን ስልክ ለመክፈት ወይም ግዢዎችን ለማጽደቅ የእርስዎን የጣት አሻራ ይጠቀሙ።\n\nማስታወሻ፦ ይህን መሣሪያ ለመክፈት የጣት አሻራን መጠቀም አይችሉም። ለተጨማሪ መረጃ፣ የእርስዎን ድርጅት አስተዳዳሪ ያነጋግሩ።"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ይቅር"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"አሁን አይደለም"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"እስማማለሁ"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"የጣት አሻራ ይዘለል?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"የጣት አሻራን ማዋቀር አንድ ወይም ሁለት ደቂቃ ብቻ ነው የሚወስደው። ይህን ከዘለሉት የጣት አሻራዎን በኋላ ላይ በቅንብሮች ውስጥ ማከል ይችላሉ።"</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"መሣሪያ በተቆለፈ ቁጥር"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"ማያ ጊዜው ካለቀ በኋላ 5 ደቂቃዎች"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"መሣሪያው እንደገና ከጀመረ ብቻ"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"ለግል ቦታዎ የተለየ ቁልፍ ከተጠቀሙ በግል ቦታዎ ውስጥ መተግበሪያዎችን ለመክፈት እርስዎ መሆንዎን ማረጋገጥ ሊኖርብዎት ይችላል።"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"የግል ቦታን ይደብቁ"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"በሚቆለፍበት ጊዜ የግል ቦታን ይደብቁ"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ሌሎች ሰዎች በመሣሪያዎ ላይ የግል ቦታ እንዳለዎት እንዳያውቁ ለማስቆም ከመተግበሪያዎችዎ ዝርዝር ውስጥ መደበቅ ይችላሉ"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"ያዋቅሩ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"የግል ቦታ"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"የግል መተግበሪያዎችን በተለየ ቦታ ይደብቁ ወይም ይቆልፉ። ለተጨማሪ ደህንነት የተለየ የGoogle መለያ ይጠቀሙ።"</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"እንዴት እንደሚሠራ"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"ለቦታዎ Google መለያ ይፍጠሩ"</b>\n"የተወሰነ መለያ የሚጠቀሙ ከሆነ የሰመሩ ፋይሎች፣ ፎቶዎች እና ኢሜይሎች ከቦታዎ ውጭ እንዳይታዩ ለማቆም ያግዛል"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"መቆለፊያ ያዘጋጁ"</b>\n"ሌሎች ሰዎች እንዳይከፍቱት ለማድረግ ቦታዎን ይዝጉ"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"መተግበሪያዎችን ይጫኑ"</b>\n"በቦታዎ ውስጥ የግል አድርገው ማቆየት የሚፈልጓቸውን መተግበሪያዎች ይጫኑ"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"ከግምት ውስጥ ያስገቡ"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"እርስዎ ቦታዎን ሲቆልፉ መተግበሪያዎች ይቆማሉ"</b>\n"ቦታዎን ሲቆልፉ በቦታዎ ውስጥ ያሉ መተግበሪያዎች ይቆማሉ እና እርስዎ ከእነሱ ማሳወቂያዎች አይደርሱዎትም"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"በእርስዎ የግል ቦታ ላይ ያሉ መተግበሪያዎች የእርስዎ የግል ቦታ ሲቆለፍ በፍቃድ አስተዳዳሪ፣ በግላዊነት ዳሽቦርድ እና በሌሎች ቅንብሮች ውስጥ አይታዩም።\n\nየእርስዎ የግል ቦታ ወደ አዲስ መሣሪያ ሊወሰድ አይችልም። የግል ቦታን በሌላ መሣሪያ ላይ መጠቀም ከፈለጉ ሌላ የግል ቦታን ማዋቀር ያስፈልግዎታል።\n\nመሣሪያዎን ከኮምፒውተር ጋር የሚያገናኘው ወይም በመሣሪያዎ ላይ ጎጂ መተግበሪያዎችን የሚጭን ማንኛውም ሰው የእርስዎን የግል ቦታ ሊደርስ ይችላል።"</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"ቦታዎን ሲቆልፉ በግል ቦታዎ ውስጥ ያሉ መተግበሪያዎች ይቆማሉ እና ከእነሱ ማሳወቂያዎች አይደርሱዎትም።\n\nየግል ቦታ ሲቆለፍ በእርስዎ የግል ቦታ ውስጥ ያሉ መተግበሪያዎች የፈቃድ አስተዳዳሪ፣ የግላዊነት ዳሽቦርድ እና ሌሎች ቅንብሮች ውስጥ አይታዩም።\n\nየግል ቦታዎ አዲስ መሣሪያ ላይ ወደነበረበት ሊመለስ አይችልም። እሱን ሌላ መሣሪያ ላይ መጠቀም ከፈለጉ ሌላ ቦታ ማዋቀር ይኖርብዎታል።\n\nመሣሪያዎን ከኮምፒውተር ጋር የሚያገናኝ ወይም በመሣሪያዎ ላይ ተንኮል አዘል መተግበሪያዎችን የሚጭን ማንኛውም ሰው የግል ቦታዎን ሊደርሱ ይችላሉ።"</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ስለግል ቦታ የበለጠ ይወቁ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ይህ ጥቂት ጊዜ ይወስዳል"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"የግል ቦታን በማዋቀር ላይ…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"ለግል ቦታ ብቻ አዲስ ቁልፍ ማቀናበር፣ ወይም መሣሪያዎን ለመክፈት የሚጠቀሙትን ተመሳሳይ ቁልፍ መጠቀም ይችላሉ"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"ማያ ገጽ መቆለፊያን ይጠቀሙ"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"አዲስ ቁልፍ ይምረጡ"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"አንዴ ይቆዩ…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"ሁሉም ዝግጁ!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"የግል ቦታዎን ለማግኘት፣ ወደ የመተግበሪያዎች ዝርዝርዎ ይሂዱ እና ወደ ታች ይሸብልሉ"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"ተከናውኗል"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"ለግል ቦታዎ ፒን ያዘጋጁ"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"ለግል ቦታዎ የይለፍ ቃል ያዘጋጁ"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ለግል ቦታዎ የሚሆን ስርዓተ ጥለት ያዘጋጁ"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"የእርስዎን ውሂብ የግል ለማድረግ እንዲያግዝ የGoogle መለያ ይፍጠሩ"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"በሚቀጥለው ማያ ገጽ ላይ በግል ቦታዎ ለመጠቀም ወደ መለያ መግባት ይችላሉ"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"ውሂብ ከግል ቦታ ውጭ እንዳይታይ ለማቆም ለማገዝ ለዚህ የተለየ መለያ ይፍጠሩ፣ ለምሳሌ፦"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"የሰመሩ ፎቶዎች፣ ፋይሎች፣ ኢሜይሎች፣ እውቂያዎች፣ የቀን መቁጠሪያ ክስተቶች እና ሌላ ውሂብ"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"የመተግበሪያ ማውረድ ታሪክ እና ምክሮች"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"የአሰሳ ታሪክ፣ እልባቶች እና የተቀመጡ የይለፍ ቃላት"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"በግል ቦታ መተግበሪያዎች ውስጥ ካለው እንቅስቃሴዎ ጋር የሚዛመድ የተጠቆመ ይዘት"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"ገባኝ"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ቆልፍ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"ደብቅ"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"እስከ <xliff:g id="COUNT">%d</xliff:g> የሚደርሱ የጣት አሻራዎችን ማከል ይችላሉ"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"የስርዓት የእውቅና ማረጋገጫ"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"የእውቅና ማረጋገጫን መሰካት"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"የአውታረ መረብ ዝርዝሮች"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"ይህ አውታረ መረብ WEP የሚባል የቆየ የደህንነት ፕሮቶኮል ይጠቀማል፣ ይህም ደህንነቱ ያነሰ ነው"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"የንዑስ አውታር ጭንብል"</string>
     <string name="server_name_title" msgid="7257095185810299066">"የአገልጋይ ስም"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ዓይነት"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"የመሣሪያ Wi‑Fi ማክ አድራሻ"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"የብሉቱዝ አድራሻ"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"መለያ ቁጥር"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"በሥራ ላይ"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"የተመረተበት ቀን"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ጥቅም ላይ የዋለበት የመጀመሪያ ቀን"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"የዑደት ቁጥር"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ከታች በስተቀኝ መታ"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ለተጨማሪ አማራጮች የመዳሰሻ ሰሌዳውን የታችኛው ቀኝ ጠርዝ መታ ያድርጉ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"የጠቋሚ ፍጥነት"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"የመዳሰሻ ሰሌዳ ምልክቶችን ይወቁ"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"የመከታተያ ፓድ፣ የትራክ ፓድ፣ መዳፊት፣ ጠቋሚ፣ ሸብልል፣ ማንሸራተት፣ የቀኝ ጠቅታ፣ ጠቅ ያድርጉ፣ ጠቋሚ"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"የቀኝ ጠቅታ፣ መታ ያድርጉ"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"ቀን መቁጠሪያ ያክሉ"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"ቀን መቁጠሪያዎን ይጠቀሙ"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"መርሐግብር"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"መርሐግብር"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"በተወሰኑ ሰዓታት ላይ የስልክ ድምፅ አጥፋ"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"የአትረብሽ ደንቦችን ያቀናብሩ"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{እስከ {time} ድረስ ለአንድ ሰዓት ብቻ ወደ ማንቂያዎች ይለውጡ}one{እስከ {time} ድረስ ለ# ሰዓት ብቻ ወደ ማንቂያዎች ይለውጡ}other{እስከ {time} ድረስ ለ# ሰዓታት ብቻ ወደ ማንቂያዎች ይለውጡ}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"እስከ <xliff:g id="FORMATTEDTIME">%1$s</xliff:g> ድረስ ብቻ ወደ ማንቂያዎች ይቀይሩ"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"ወደ ሁልጊዜ አቋርጥ ለውጥ"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"ማስጠንቀቂያ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ዝጋ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ስለዚህ መሣሪያ ግብረመልስ ላክ"</string>
@@ -4468,7 +4474,7 @@
     <string name="credman_picker_title" msgid="8442086614222006564">"ለይለፍ ቃላት፣ የይለፍ ቁልፎች እና ራስ-ሙላ ተመራጭ አገልግሎት"</string>
     <string name="credman_confirmation_message_title" msgid="8847900085593880729">"%1$s ይጥፋ?"</string>
     <string name="credman_confirmation_message" msgid="2357324543658635239">"&lt;b&gt;ይህ አገልግሎት ይጥፋ?&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; እንደ ይለፍ ቃላት፣ ይለፍ ቁልፎች፣ የመክፈያ ዘዴዎች እና ሌሎች መረጃዎች ያለ የተቀመጠ መረጃ በመለያ በሚገቡበት ጊዜ አይሞሉም። የእርስዎን የተቀመጠ መረጃ ለመጠቀም የይለፍ ቃል፣ የይለፍ ቁልፍ ወይም የውሂብ አገልግሎት ይምረጡ።"</string>
-    <string name="account_dashboard_title_with_passkeys" msgid="648242372086733541">"የይለፍ ቃላት፣ የይለፍ ቁልፎ እና መለያዎች"</string>
+    <string name="account_dashboard_title_with_passkeys" msgid="648242372086733541">"የይለፍ ቃላት፣ የይለፍ ቁልፎች እና መለያዎች"</string>
     <string name="credman_confirmation_message_new_ui" msgid="6126274509951156460">"&lt;b&gt;ሁሉም አገልግሎቶች ይጥፉ?&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; ሲገቡ የይለፍ ቃሎች፣ የይለፍ ቁልፎች እና ሌላ የተቀመጡ መረጃዎች ለራስ-ሙላ አይገኙም"</string>
     <string name="credman_autofill_confirmation_message_new_ui" msgid="6222139222478822267">"&lt;b&gt;የመረጡትን አገልግሎት ወደዚህ ይለውጡ &lt;xliff:g id=app_name example=Provider&gt;%1$s&lt;/xliff:g&gt;?&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; አዲስ የይለፍ ቃሎች፣ የይለፍ ቁልፎች እና ሌሎች መረጃዎች ከአሁን በኋላ እዚህ ይቀመጣሉ። &lt;xliff:g id=app_name example=Provider&gt;%1$s&lt;/xliff:g&gt; ምን በራስ-ሙላ ሊሆን እንደሚችል ለማወቅ በማያ ገፅዎ ላይ ያለውን ነገር ይጠቀማል።"</string>
     <string name="credman_enable_confirmation_message_title" msgid="1037501792652277829">"%1$s ጥቅም ላይ ይዋል?"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ግራ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ቀኝ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"መያዣ"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"ባትሪ"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"የቅንብሮች ፓነል"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"የዴስክቶፕ ሁነታን አስገድድ"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"በሁለተኛ ማሳያዎች ላይ የሙከራ ዴስክቶፕ ሁነታን አስገድድ"</string>
