--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"বাতিল করুন"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"এখন নয়"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"আমি সম্মতি জানাচ্ছি"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"আরও"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"আপনার ফেস দিয়ে আনলক করুন"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"মনে রাখবেন"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"আপনার ফোন আনলক বা কেনাকাটাগুলির অনুমোদন করতে আপনার আঙ্গুলের ছাপ ব্যবহার করুন। \n\nদ্রষ্টব্য: আপনি এই ডিভাইসটি আনলক করার জন্য আপনার আঙ্গুলের ছাপ ব্যবহার করতে পারবেন না। আরও তথ্যের জন্য, আপনার প্রতিষ্ঠানের প্রশাসকের সাথে যোগাযোগ করুন।"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"বাতিল করুন"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"এখন নয়"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"আমি রাজি"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ফিঙ্গারপ্রিন্ট এড়িয়ে যাবেন?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ফিঙ্গারপ্রিন্ট সেট-আপ করতে এক থেকে দুই মিনিট মতো সময় লাগবে। আপনি যদি এড়িয়ে যেতে চান তবে পরে সেটিংসে গিয়ে পরিবর্তন করতে পারবেন।"</string>
@@ -565,7 +563,7 @@
     <string name="private_space_fingerprint_enroll_finish_message" msgid="4754797926493316965">"আপনার প্রাইভেট স্পেস আনলক করতে বা কেনাকাটা অনুমোদন করতে ফিঙ্গারপ্রিন্ট ব্যবহার করুন"</string>
     <string name="private_space_face_enroll_introduction_title" msgid="3717541082520006032">"প্রাইভেট স্পেসের জন্য ফেস আনলক সেট আপ করুন"</string>
     <string name="private_space_face_enroll_introduction_message" msgid="250239418499081821">"অ্যাপে সাইন-ইন বা কেনাকাটায় অনুমোদন করার মতোই ফিঙ্গারপ্রিন্ট ব্যবহার করে প্রাইভেট স্পেস আনলক বা নিজের পরিচয় যাচাই করুন"</string>
-    <string name="private_space_face_enroll_introduction_info_looking" msgid="5694757845303924042">"ফোন সামনে থেকে দেখলে আপনি না চাইলেও প্রাইভেট স্পেস আনলক হয়ে যাবে। আপনার মতো দেখতে এমন যে কেউ, যেমন আপনার যমজ ভাই বা বোন বা অন্য কেউ, আপনার মুখের সামনে প্রাইভেট স্পেস এনেও আনলক করতে পারবেন।"</string>
+    <string name="private_space_face_enroll_introduction_info_looking" msgid="5694757845303924042">"ফোন সামনে থেকে দেখলে আপনি না চাইলেও প্রাইভেট স্পেস আনলক হয়ে যাবে। আপনার মতো দেখতে এমন যে কেউ, যেমন আপনার যমজ ভাই বা বোন বা অন্য কেউ প্রাইভেট স্পেস আনলক করতে পারবেন। এছাড়া, ডিভাইস আপনার মুখের সামনে এনেও প্রাইভেট স্পেস আনলক করা যাবে।"</string>
     <string name="private_space_face_enroll_introduction_info_less_secure" msgid="8460719783943533172">"প্রাইভেট স্পেস আনলক করার জন্য শক্তিশালী প্যাটার্ন, পিন বা পাসওয়ার্ড ব্যবহার করার পরিবর্তে নিজের ফেস ব্যবহার করলে সেটি কম সুরক্ষিত হতে পারে"</string>
     <string name="private_space_face_settings_require_attention_details" msgid="2799569069549999689">"প্রাইভেট স্পেস আনলক করার সময় চোখ খোলা রাখতে হবে। এটি সঠিকভাবে করতে সানগ্লাস খুলে রাখুন।"</string>
     <string name="private_space_face_settings_footer" msgid="7722256209563543711">"আপনার প্রাইভেট স্পেস আনলক করতে নিজের ফেস ব্যবহার করুন।\n\nমনে রাখবেন:\nএকবারে আপনি শুধুমাত্র একটি ফেস সেট-আপ করতে পারবেন। অন্য কোনও ফেস যোগ করতে, বর্তমানে থাকা ফেস মুছে দিন।\n\nফোনের দিকে তাকালে, আপনি না চাইলেও সেটি আনলক হয়ে যেতে পারে।\n\nঅন্য কেউ আপনার মুখের সামনে ধরে রেখে ট্যাবলেট আনলক করতে পারেন।\n\nঅনেকটা আপনার মতো দেখতে কেউ, যেমন যমজ ভাই বা বোন, আপনার প্রাইভেট স্পেস আনলক করতে পারেন।"</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"প্রতিবার ডিভাইস লক হলে"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"স্ক্রিন টাইমআউটের পরে ৫ মিনিট"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"শুধুমাত্র ডিভাইস রিস্টার্ট হওয়ার পরে"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"আপনার প্রাইভেট স্পেসের জন্য অন্য একটি লক ব্যবহার করলে, আপনাকে প্রাইভেট স্পেসে অ্যাপ ওপেন করার আগে, আপনি যে সেই ব্যক্তি তা যাচাই করতে হবে।"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"প্রাইভেট স্পেস লুকান"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"প্রাইভেট স্পেস লক থাকাকালীন সেটি লুকান"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"আপনার ডিভাইসে যে প্রাইভেট স্পেস আছে সে কথা অন্য লোকজনকে জানানো বন্ধ করতে, এটি আপনার অ্যাপ তালিকা থেকে লুকাতে পারবেন"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"সেট-আপ করুন"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"প্রাইভেট স্পেস"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"প্রাইভেট অ্যাপ আলাদা একটি স্পেসে লুকিয়ে রাখুন বা লক করুন। অতিরিক্ত সুরক্ষার জন্য নির্দিষ্ট Google অ্যাকাউন্ট ব্যবহার করুন।"</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"এটি কীভাবে কাজ করে"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"আপনার স্পেসের জন্য Google অ্যাকাউন্ট তৈরি করুন"</b>\n"আপনি নিজের স্পেসের জন্য নির্দিষ্ট অ্যাকাউন্ট ব্যবহার করলে, সেটি স্পেসের বাইরে সিঙ্ক করা ফাইল, ফটো এবং ইমেল দেখানো বন্ধ করতে সহায়তা করে"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"লক সেট করুন"</b>\n"অন্যরা যাতে এই স্পেস খুলতে না পারে সেজন্য আপনার স্পেস লক করুন"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"অ্যাপ ইনস্টল করুন"</b>\n"আপনি নিজের স্পেসে যেসব অ্যাপ ব্যক্তিগত রাখতে চান সেগুলি ইনস্টল করুন"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"মনে রাখবেন"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"আপনি নিজের স্পেস লক করলে অ্যাপ বন্ধ হয়"</b>\n"আপনি নিজের স্পেস লক করলে, আপনার স্পেসে থাকা অ্যাপগুলি বন্ধ হয়ে যাবে এবং আপনি সেগুলি থেকে কোনও বিজ্ঞপ্তি পাবেন না"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"আপনার প্রাইভেট স্পেস লক থাকাকালীন, সেখানে থাকা অ্যাপ পার্মিশন ম্যানেজার, প্রাইভেসি ড্যাশবোর্ড এবং অন্যান্য সেটিংসে দেখা যাবে না।\n\nনতুন ডিভাইসে আপনার প্রাইভেট স্পেস সরানো যাবে না। আপনি অন্য ডিভাইসে প্রাইভেট স্পেস ব্যবহার করতে চাইলে আরেকটি সেট-আপ করতে হবে।\n\nকোনও কম্পিউটারের সাথে আপনার ডিভাইস কানেক্ট করতে পারেন বা আপনার ডিভাইসে ক্ষতিকর অ্যাপ ইনস্টল করতে পারেন এমন যেকেউ হয়ত প্রাইভেট স্পেস ব্যবহার করতে পারেন।"</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"আপনি নিজের স্পেস লক করলে, আপনার প্রাইভেট স্পেসে থাকা অ্যাপগুলি বন্ধ হয়ে যাবে এবং সেগুলি থেকে আপনি কোনও বিজ্ঞপ্তি পাবেন না।\n\nপ্রাইভেট স্পেস লক থাকাকালীন, সেখানে থাকা অ্যাপ, পার্মিশন ম্যানেজার, প্রাইভেসি ড্যাশবোর্ড এবং অন্যান্য সেটিংসে দেখা যাবে না।\n\nনতুন ডিভাইসে আপনার প্রাইভেট স্পেস ফিরিয়ে আনা যাবে না। আপনি অন্য ডিভাইসে স্পেস ব্যবহার করতে চাইলে আপনাকে অন্য একটি স্পেস সেট-আপ করতে হবে।\n\nকেউ আপনার ডিভাইস কোনও কম্পিউটারের সাথে কানেক্ট করলে বা ডিভাইসে ক্ষতিকর অ্যাপ ইনস্টল করলে, তিনি হয়তো আপনার প্রাইভেট স্পেস অ্যাক্সেস করতে পারবেন।"</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"প্রাইভেট স্পেস সম্পর্কে আরও জানুন"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"এর জন্য কিছুক্ষণ সময় লাগতে পারে"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"প্রাইভেট স্পেস সেট-আপ করা হচ্ছে…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"আপনি শুধুমাত্র প্রাইভেট স্পেসের জন্য একটি নতুন লক সেট করতে পারবেন অথবা আপনার ডিভাইস আনলক করতে যে লকটি ব্যবহার করেন সেটি ব্যবহার করা যাবে।"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"স্ক্রিন লক ব্যবহার করুন"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"নতুন লক বেছে নিন"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"একটু অপেক্ষা করুন…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"সব রেডি!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"আপনার প্রাইভেট স্পেস খুঁজে দেখতে অ্যাপ তালিকায় যান, তারপর নিচের দিকে স্ক্রল করুন"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"হয়ে গেছে"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"আপনার প্রাইভেট স্পেসের জন্য পিন সেট করুন"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"আপনার প্রাইভেট স্পেসের জন্য পাসওয়ার্ড সেট করুন"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"আপনার প্রাইভেট স্পেসের জন্য প্যাটার্ন সেট করুন"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"আপনার ডেটা ব্যক্তিগত রাখতে Google অ্যাকাউন্ট তৈরি করুন"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"পরবর্তী স্ক্রিনে আপনার প্রাইভেট স্পেসের সাথে ব্যবহার করতে কোনও অ্যাকাউন্টে সাইন-ইন করতে পারবেন"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"প্রাইভেট স্পেসের বাইরে ডেটা দেখতে পাওয়া বন্ধ করতে একটি ডেডিকেটেড অ্যাকাউন্ট তৈরি করুন, যেমন:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"সিঙ্ক করা ফটো, ফাইল, ইমেল, পরিচিতি, ক্যালেন্ডারের ইভেন্ট ও অন্যান্য ডেটা"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"অ্যাপ ডাউনলোড করার ইতিহাস ও সাজেশন"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"ব্রাউজিং ইতিহাস, বুকমার্ক ও সেভ করা বুকমার্ক"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"প্রাইভেট স্পেস অ্যাপে আপনার অ্যাক্টিভিটি সম্পর্কিত সাজেস্ট করা কন্টেন্ট"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"বুঝেছি"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"লক"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"লুকান"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপনি সর্বাধিক <xliff:g id="COUNT">%d</xliff:g>টি ফিঙ্গারপ্রিন্ট যোগ করতে পারবেন"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"সিস্টেম সার্টিফিকেট"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"সার্টিফিকেট পিন করা হচ্ছে"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"নেটওয়ার্কের বিবরণ"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"এই নেটওয়ার্ক WEP নামের একটি পুরনো সুরক্ষা প্রোটোকল ব্যবহার করে, যেটি তুলনামূলকভাবে কম সুরক্ষিত"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"সাবনেট মাস্ক"</string>
     <string name="server_name_title" msgid="7257095185810299066">"সার্ভারের নাম"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ধরন"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"ডিভাইসের ওয়াই-ফাই MAC অ্যাড্রেস"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"ব্লুটুথ অ্যাড্রেস"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"সিরিয়াল নম্বর"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"আপটাইম"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"তৈরির তারিখ"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ব্যবহারের প্রথম তারিখ"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"সাইকেল কাউন্ট"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ডানদিকের-নিচে ট্যাপ করা"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"আরও বিকল্পের জন্য টাচপ্যাডের নিচে ডানদিকের কোণায় ট্যাপ করুন"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"পয়েন্টারের গতি"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"টাচপ্যাডের জেসচার সম্পর্কে জানুন"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"ট্র্যাকপ্যাড, ট্র্যাক প্যাড, মাউস, কার্সর, স্ক্রল, সোয়াইপ, ডানদিকের বোতামে ক্লিক, ক্লিক, পয়েন্টার"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"ডানদিকের বোতামে ক্লিক, ট্যাপ"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"একটি ক্যালেন্ডার যোগ করুন"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"আপনার ক্যালেন্ডার ব্যবহার করুন"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"শিডিউল করুন"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"সময়সূচি"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"নির্দিষ্ট সময়ে ফোন সাইলেন্ট করুন"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"\'বিরক্ত করবে না\' মোডের নিয়ম সেট-আপ করুন"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{{time} পর্যন্ত এক ঘণ্টার জন্য অ্যালার্ম পরিবর্তন করুন}one{{time} পর্যন্ত # ঘণ্টার জন্য অ্যালার্ম পরিবর্তন করুন}other{{time} পর্যন্ত # ঘণ্টার জন্য অ্যালার্ম পরিবর্তন করুন}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"শুধুমাত্র <xliff:g id="FORMATTEDTIME">%1$s</xliff:g> পর্যন্ত অ্যালার্মগুলি পরিবর্তন করুন"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"সর্বদা বাধা দেওয়াতে পরিবর্তন করুন"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"সতর্কতা"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"বন্ধ করুন"</string>
     <string name="device_feedback" msgid="5351614458411688608">"এই ডিভাইসের সম্পর্কে মতামত পাঠান"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"বাঁদিক"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ডান"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"কেস"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"ব্যাটারি"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"সেটিংস প্যানেল"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"ফোর্স ডেস্কটপ মোড"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"সেকেন্ডারি ডিসপ্লেতে ফোর্স এক্সপেরিমেন্টাল ডেস্কটপ মোড চালু করা আছে"</string>
