--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Par venstre apparat"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Indstillinger for høreapparat"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Genvej, høreapparatskompatibilitet"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Forindstillinger"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Forindstilling"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Forindstillingen kunne ikke opdateres"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Lydudgang"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Om lydudgang"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Annuller"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Ikke nu"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Acceptér"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Mere"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Lås op med dit ansigt"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Husk!"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Lås din telefon op eller godkend køb ved hjælp af dit fingeraftryk.\n\nBemærk! Du kan ikke bruge dit fingeraftryk til at låse op for denne enhed. Få flere oplysninger ved at kontakte administratoren for din organisation."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Annuller"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Ikke nu"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Acceptér"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Spring fingeraftryk over?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Konfigurationen af fingeraftryk tager ikke mere end et minut eller to. Hvis du springer dette trin over, kan du tilføje dit fingeraftryk på et senere tidspunkt i indstillingerne."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Hver gang enheden låses"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 minutter efter timeout for skærmen"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Kun efter genstart af enheden"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Hvis du bruger en anden lås til dit private område, skal du muligvis verificere din identitet for at åbne apps i dit private område."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Skjul privat område"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Skjul det private område, når det er låst"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Hvis andre ikke må vide, at du har et privat område på din enhed, kan du skjule det på applisten"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Konfigurer"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privat område"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Skjul eller lås private apps i et separat område. Anvend en dedikeret Google-konto for at få ekstra beskyttelse."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Sådan fungerer det"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Opret en Google-konto til dit område"</b>\n"Hvis du bruger en dedikeret konto, kan det være med til at forhindre, at synkroniserede filer, billeder og mails vises uden for dit område"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Konfigurer en lås"</b>\n"Lås dit område for at forhindre andre i at åbne det."</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Installer apps"</b>\n"Installer apps, du vil holde private i dit område"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Husk!"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Apps afbrydes, når du låser dit område"</b>\n"Hvis du låser dit område, afbrydes apps i området, og du modtager ikke notifikationer fra dem"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Apps i dit private område vises ikke i tilladelsesmanager, privatlivspanelet eller andre indstillinger, når det private område er låst.\n\nDu kan ikke flytte dit private område til en ny enhed. Hvis du vil bruge det private område på en anden enhed, skal du konfigurere et nyt privat område.\n\nPersoner, der slutter din enhed til en computer eller installerer skadelige apps på din enhed, kan muligvis få adgang til dit private område."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Hvis du låser dit område, afbrydes apps i det private område, og du modtager ikke notifikationer fra dem.\n\nApps i dit private område vises ikke i tilladelsesadministrator, privatlivspanelet eller andre indstillinger, når det private område er låst.\n\nDu kan ikke gendanne dit private område på en ny enhed. Du skal konfigurere et andet rum, hvis du vil bruge det på en anden enhed.\n\nAlle, der forbinder din enhed til en computer eller installerer skadelige apps på enheden, kan muligvis tilgå dit private område."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Få flere oplysninger om privat område"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Det tager et øjeblik"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Konfigurerer et privat område…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Du kan indstille en ny lås til privat område eller bruge den samme lås, som du bruger til at låse din enhed op"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Brug skærmlås"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Vælg en ny lås"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Vent et øjeblik…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Det var det hele."</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Du kan finde dit private område ved at gå til din appliste og rulle ned"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Udfør"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Angiv en pinkode til dit private område"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Angiv en adgangskode til dit private område"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Angiv et mønster til dit private område"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Opret en Google-konto for at hjælpe med at beskytte dine data"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"På den næste skærm kan du logge på en konto, du vil bruge med dit private område"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Opret en dedikeret konto for at hjælpe med at undgå, at data vises uden for det private område, f.eks.:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Synkroniserede billeder, filer, mails, kontakter, kalenderbegivenheder og andre data"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Historik for appdownload og anbefalinger"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Browserhistorik, bogmærker og gemte adgangskoder"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Foreslået indhold, der er relateret til din aktivitet i apps i det private område"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"OK"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Lås"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Skjul"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Du kan tilføje op til <xliff:g id="COUNT">%d</xliff:g> fingeraftryk"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Systemcertifikat"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fastgørelse af certifikat"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Netværksoplysninger"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Dette netværk anvender en ældre og mindre sikker sikkerhedsprotokol, der kaldes for WEP"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Undernetmaske"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Servernavn"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Type"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Enhedens MAC-adresse for Wi-Fi"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth-adresse"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serienummer"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Oppetid"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Produktionsdato"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Dato for ibrugtagning"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Antal cyklusser"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Tryk nederst til højre"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Tryk nederst til højre på touchpladen for at se mere"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Markørens hastighed"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Se bevægelser på touchpladen"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"touchplade, touch plade, mus, markør, rul, stryg, højreklik, klik, pointer"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"højreklik, tryk"</string>
@@ -2044,7 +2038,7 @@
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Farvekontrast"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Højere kontrast gør tekst, knapper og ikoner tydeligere. Vælg den kontrast, du foretrækker."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Visse apps understøtter ikke alle indstillinger for farve- og tekstkontrast"</string>
-    <string name="color_contrast_preview" msgid="6791430227535363883">"Se forhåndsvisning"</string>
+    <string name="color_contrast_preview" msgid="6791430227535363883">"Forhåndsvisning"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 dage siden"</string>
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Vil du følge op?"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Tilføj en kalender"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Brug din kalender"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Tidsplan"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Planlæg"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Gør telefonen lydløs på bestemte tidspunkter"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Angiv regler for Forstyr ikke"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Skift til kun alarmer i én time (indtil {time})}one{Skift til kun alarmer i # time (indtil {time})}other{Skift til kun alarmer i # timer (indtil {time})}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Skift til Kun alarmer frem til <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Skift til Afbryd altid"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Advarsel"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Luk"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Send feedback om denne enhed"</string>
@@ -4460,7 +4466,7 @@
     <string name="autofill_keywords" msgid="8598763328489346438">"automatisk, udfyld, autofyld, adgangskode"</string>
     <string name="credman_keywords" msgid="8305600680836806170">"data, adgangsnøgle, adgangskode"</string>
     <string name="credman_autofill_keywords" msgid="701180623776848914">"automatisk, udfyldning, autofyld, data, adgangsnøgle, adgangskode"</string>
-    <string name="credman_button_change" msgid="4072629639218503790">"Ændring"</string>
+    <string name="credman_button_change" msgid="4072629639218503790">"Skift"</string>
     <string name="credman_button_open" msgid="7519871964170816850">"Åbn"</string>
     <string name="credman_app_list_preference_none" msgid="2509646651254971448">"Der er ikke valgt nogen"</string>
     <string name="autofill_confirmation_message" msgid="4888767934273494272">"&lt;b&gt;Sørg for, at du har tillid til denne app&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; anvender indholdet af din skærm til at fastslå, hvad der kan udfyldes automatisk."</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Venstre"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Højre"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Etui"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Batteri"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Indstillingspanel"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Gennemtving skrivebordstilstand"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Gennemtving eksperimentel skrivebordstilstand på sekundære skærme"</string>
