--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"جفت کردن گوش چپ"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"تنظیمات دستگاه سمعک"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"میان‌بر، سازگاری با سمعک"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"پیش‌تنظیم‌ها"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"پیش‌تنظیم"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"پیش‌تنظیم به‌روزرسانی نشد"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"خروجی صوتی"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"درباره خروجی صوتی"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"لغو"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"اکنون نه"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"موافقم"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"بیشتر"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"با چهره‌تان قفل را باز کنید"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"به‌خاطر داشته باشید"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"از اثر انگشتتان برای باز کردن قفل تلفن یا تأیید خریدها استفاده کنید.\n\nتوجه: نمی‌توانید از اثر انگشتتان برای باز کردن قفل این دستگاه استفاده کنید. برای اطلاعات بیشتر، با سرپرست سیستم سازمانتان تماس بگیرید."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"لغو"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"اکنون نه"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"موافقم"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"از تنظیم اثر انگشت رد می‌شوید؟"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"تنظیم اثر انگشت تنها یک یا دو دقیقه طول می‌کشد. اگر از این تنظیم رد شوید، می‌توانید اثر انگشتتان را بعداً در تنظیمات اضافه کنید."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"هربار که دستگاه قفل می‌شود"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"‫۵ دقیقه پس‌از خاموش شدن صفحه"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"فقط بعداز بازراه‌اندازی دستگاه"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"اگر از قفل دیگری برای فضای خصوصی استفاده می‌کنید، شاید لازم باشد برای باز کردن برنامه‌ها در فضای خصوصی، هویتتان را به‌تأیید برسانید."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"پنهان کردن فضای خصوصی"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"پنهان کردن فضای خصوصی هنگام قفل بودن آن"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"برای اینکه دیگران متوجه نشوند فضای خصوصی در دستگاهتان روشن است، می‌توانید آن را از فهرست برنامه‌ها پنهان کنید"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"راه‌اندازی"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"فضای خصوصی"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"‏برنامه‌های خصوصی را در فضای جداگانه‌ای پنهان یا قفل کنید. برای امنیت بیشتر، از یک «حساب Google» اختصاصی استفاده کنید."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"روش کار"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320">"‏"<b>"ایجاد «حساب Google» برای فضا"</b>\n"اگر از حساب اختصاصی استفاده کنید، این کار کمک می‌کند فایل‌ها، عکس‌ها، و ایمیل‌های همگام‌سازی‌شده در خارج از فضای شما نشان داده نشود"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"تنظیم قفل"</b>\n"فضایتان را قفل کنید تا دیگران نتوانند آن را باز نکنند"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"نصب برنامه"</b>\n"برنامه‌هایی را که می‌خواهید در فضایتان به‌صورت خصوصی حفظ شود نصب کنید"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"به‌خاطر داشته باشید"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"برنامه‌ها هنگام قفل کردن فضا متوقف می‌شوند"</b>\n"وقتی فضای خود را قفل می‌کنید، برنامه‌های موجود در فضا متوقف می‌شوند و اعلانی از آن‌ها دریافت نخواهید کرد"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"درصورت قفل بودن فضای خصوصی، برنامه‌های فضای خصوصی در مدیر اجازه‌ها، داشبورد حریم خصوصی، و دیگر تنظیمات نشان داده نخواهد شد.\n\nنمی‌توانید فضای خصوصی‌تان را به دستگاه دیگری منتقل کنید. اگر می‌خواهید از آن در دستگاه دیگری استفاده کنید، باید فضای خصوصی دیگری راه‌اندازی کنید.\n\nهر کسی که دستگاه شما را به رایانه متصل کند یا برنامه‌های مخرب در دستگاهتان نصب کند ممکن است بتواند به فضای خصوصی شما دسترسی داشته باشد."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"وقتی فضایتان را قفل می‌کنید، برنامه‌های موجود در فضای خصوصی شما متوقف می‌شوند و اعلانی از آن‌ها دریافت نخواهید کرد.\n\nهنگام قفل بودن فضا، برنامه‌های موجود در فضای خصوصی شما در مدیر اجازه‌ها، داشبورد حریم خصوصی، و سایر تنظیمات نشان داده نمی‌شود.\n\nنمی‌توان فضای خصوصی شما را در دستگاه جدید بازیابی کرد. اگر می‌خواهید از فضای خصوصی در دستگاه دیگری استفاده کنید، باید فضای دیگری راه‌اندازی کنید.\n\nهر شخصی که دستگاه شما را به رایانه متصل کند یا برنامه‌های مخرب روی دستگاهتان نصب کند، ممکن است بتواند به فضای خصوصی شما دسترسی داشته باشد."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"درباره فضای خصوصی بیشتر بدانید"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"این کار چند لحظه طول می‌کشد"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"درحال راه‌اندازی فضای خصوصی…"</string>
@@ -633,7 +624,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"می‌توانید قفل جدیدی را فقط برای فضای خصوصی تنظیم کنید یا از همان قفلی که برای باز کردن قفل دستگاهتان استفاده می‌شود استفاده کنید"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"استفاده از قفل صفحه"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"انتخاب قفل جدید"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"چند لحظه صبر کنید…"</string>
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"چند لحظه صبر کنید…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"همه چیز آماده است!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"برای پیدا کردن فضای خصوصی، به فهرست برنامه‌ها بروید و به‌پایین پیمایش کنید"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"تمام"</string>
@@ -647,14 +638,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"تنظیم پین برای فضای خصوصی"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"تنظیم گذرواژه برای فضای خصوصی"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"تنظیم الگو برای فضای خصوصی"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"‏برای کمک به خصوصی نگه داشتن داده‌هایتان، «حساب Google» ایجاد کنید"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"در صفحه بعدی می‌توانید وارد حساب شوید تا با آن از فضای خصوصی خود استفاده کنید"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"برای کمک به جلوگیری از نمایش داده‌ها در خارج از فضای خصوصی، حساب اختصاصی ایجاد کنید، برای مثال:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"عکس‌ها، فایل‌ها، ایمیل‌ها، مخاطبین، رویدادهای تقویم، و داده‌های دیگر همگام‌سازی شده است"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"تاریخچه بارگیری برنامه و توصیه‌ها"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"سابقه مرور، نشانک‌ها و گذرواژه‌های ذخیره‌شده"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"محتوای پیشنهادی مرتبط با فعالیتتان در برنامه‌های فضای خصوصی"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"متوجه‌ام"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"قفل کردن"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"پنهان کردن"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"می‌توانید حداکثر <xliff:g id="COUNT">%d</xliff:g> اثرانگشت اضافه کنید"</string>
@@ -1065,8 +1048,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"گواهینامه سیستم"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"سنجاق کردن گواهینامه"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"جزئیات شبکه"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"‏این شبکه از پروتکل امنیتی قدیمی‌تری به‌نام WEP استفاده می‌کند که امنیت کمتری دارد"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"پوشش زیرشبکه"</string>
     <string name="server_name_title" msgid="7257095185810299066">"نام سرور"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"نوع"</string>
@@ -1384,8 +1366,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"‏نشانی Wi‑Fi MAC دستگاه"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"آدرس بلوتوث"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"شمارهٔ سریال"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"زمان فعال بودن دستگاه"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"تاریخ تولید"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"تاریخ اولین استفاده"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"تعداد چرخه‌ها"</string>
@@ -1939,6 +1920,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ضربه به راست پایین"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"برای گزینه‌های بیشتر، روی پایین گوشه چپ صفحه لمسی ضربه بزنید"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"سرعت اشاره‌گر"</string>
+    <string name="pointer_fill_style" msgid="8413840032931637595">"سبک رنگ نشانگر"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"تغییر سبک رنگ نشانگر به سیاه"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"تغییر سبک رنگ نشانگر به سبز"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"تغییر سبک رنگ نشانگر به زرد"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"تغییر سبک رنگ نشانگر به صورتی"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"تغییر سبک رنگ نشانگر به آبی"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"آشنایی با اشاره‌های صفحه لمسی"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"پد لمسی، پدلمسی، موشواره، مکان‌نما، پیمایش، تند کشیدن، کلیک راست، کلیک، اشاره‌گر"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"کلیک راست، ضربه زدن"</string>
@@ -3347,6 +3334,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"افزودن تقویم"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"استفاده از تقویم"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"زمان‌بندی"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"زمان‌بندی"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"بی‌صدا کردن تلفن در زمان‌های خاصی"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"تنظیم قانون‌های «مزاحم نشوید»"</string>
@@ -3811,6 +3804,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{تغییر به «فقط زنگ هشدار» به‌مدت یک ساعت تا {time}}one{تغییر به «فقط زنگ هشدار» به‌مدت # ساعت تا {time}}other{تغییر به «فقط زنگ هشدار» به‌مدت # ساعت تا {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"تغییر به «فقط هشدارها» تا <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"تغییر در «همیشه وقفه»"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"هشدار"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"بستن"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ارسال بازخورد درباره این دستگاه"</string>
@@ -4794,8 +4793,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"چپ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"راست"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"جلد محاف"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"باتری"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"پانل تنظیمات"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"اجرای اجباری حالت دسک‌‌تاپ"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"اجرای اجباری حالت دسک‌تاپ آزمایشی در نمایشگرهای ثانوی"</string>
