--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Upari lijevo uho"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Postavke slušnih pomagala"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Prečac, kompatibilnost sa slušnim pomagalima"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Unaprijed definirane postavke"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Unaprijed definirana postavka"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Ažuriranje unaprijed definiranih postavki nije uspjelo"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Audioizlaz"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"O audioizlazu"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Odustani"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Ne sad"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Prihvaćam"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Više"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Otključavanje licem"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Ne zaboravite"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Otključajte telefon ili odobrite kupnje otiskom prsta.\n\nNapomena: ovaj uređaj ne možete otključati otiskom prsta. Za više informacija obratite se administratoru organizacije."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Odustani"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Ne sad"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Prihvaćam"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Želite li preskočiti otisak prsta?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Postavljanje otiska prsta traje samo minutu do dvije. Ako to preskočite, otisak prsta možete dodati kasnije u postavkama."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Svaki put kad se uređaj zaključa"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 min nakon automatskog isključivanja"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Samo nakon ponovnog pokretanja uređaja"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Ako upotrebljavate neko drugo zaključavanje za svoj privatni prostor, možda ćete trebati potvrditi da vi otvarate aplikacije u privatnom prostoru."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Sakrivanje privatnog prostora"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Sakrij privatni prostor kada je zaključan"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Kako drugi ne bi znali da imate privatni prostor na uređaju, možete ga sakriti s popisa aplikacija"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Postavite"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privatni prostor"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Sakrijte ili zaključajte privatne aplikacije u zasebnom prostoru. Koristite namjenski Google račun radi dodatne sigurnosti."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Kako to funkcionira"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Izradite Google račun za svoj prostor"</b>\n"Upotrebom namjenskog računa možete spriječiti prikazivanje sinkroniziranih datoteka, fotografija i e-poruka izvan vašeg prostora"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Postavite zaključavanje"</b>\n"Zaključajte svoj prostor kako ga druge osobe ne bi mogle otvoriti"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Instalirajte aplikacije"</b>\n"Instalirajte aplikacije koje želite da ostanu privatne u vašem prostoru"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Napomena"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Aplikacije se zaustavljaju kad zaključate prostor"</b>\n"Kad zaključate prostor, aplikacije u vašem prostoru zaustavljaju se i nećete primati obavijesti od njih"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplikacije u vašem privatnom prostoru neće se prikazivati u Upravitelju dopuštenja, na nadzornoj ploči za privatnost i u drugim postavkama kada je privatni prostor zaključan.\n\nVaš se privatni prostor ne može premjestiti na novi uređaj. Trebat ćete postaviti novi privatni prostor ako ga želite koristiti na drugom uređaju.\n\nSvatko tko poveže vaš uređaj s računalom ili instalira štetne aplikacije na vaš uređaj moći će pristupiti vašem privatnom prostoru."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Kad zaključate prostor, aplikacije u vašem privatnom prostoru zaustavljaju se i nećete primati obavijesti od njih.\n\nAplikacije u vašem privatnom prostoru neće se prikazivati u Upravitelju dopuštenja, na nadzornoj ploči za privatnost i u drugim postavkama kada je privatni prostor zaključan.\n\nVaš se privatni prostor ne može vratiti na novi uređaj. Trebat ćete postaviti drugi prostor ako ga želite koristiti na drugom uređaju.\n\nSvatko tko poveže vaš uređaj s računalom ili instalira zlonamjerne aplikacije na vaš uređaj moći će pristupiti vašem privatnom prostoru."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Saznajte više o privatnom prostoru"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"To će potrajati nekoliko trenutaka"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"U tijeku je postavljanje privatnog prostora…"</string>
@@ -633,7 +624,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Možete postaviti novo zaključavanje samo za privatni prostor ili koristiti postojeće zaključavanje za otključavanje uređaja"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Koristi zaključavanje zaslona"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Odaberite novo zaključavanje"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Samo trenutak…"</string>
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Samo tren…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Sve je spremno!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Da biste pristupili privatnom prostoru, otvorite popis aplikacija, a zatim se pomaknite prema dolje"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Gotovo"</string>
@@ -647,14 +638,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Postavite PIN za privatni prostor"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Postavljanje zaporke za privatni prostor"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Postavljanje uzorka za privatni prostor"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Izradite Google račun kako biste zaštitili privatnost svojih podataka"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Na sljedećem zaslonu možete se prijaviti na račun koji ćete upotrebljavati za svoj privatni prostor"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Izradite namjenski račun kako biste spriječili prikazivanje podataka izvan privatnog prostora, kao što je sljedeće:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Sinkronizirane fotografije, datoteke, e-poruke, kontakti, događaji iz kalendara i drugo"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Povijest preuzimanja aplikacija i preporuke"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Povijest pregledavanja, oznake i spremljene zaporke"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Predloženi sadržaj povezan s vašom aktivnošću u aplikacijama privatnog prostora"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Shvaćam"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Zaključavanje"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Sakrivanje"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Maksimalni broj otisaka prstiju koji možete dodati: <xliff:g id="COUNT">%d</xliff:g>"</string>
@@ -1065,8 +1048,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certifikat sustava"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Prikvačivanje certifikata"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Podaci o mreži"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Ova mreža koristi stariji sigurnosni protokol naziva WEP, koji je manje siguran"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Maska podmreže"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Naziv poslužitelja"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Vrsta"</string>
@@ -1384,8 +1366,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"MAC adresa uređaja za Wi-Fi"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth adresa"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serijski broj"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Vrijeme aktivnosti"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Datum proizvodnje"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Datum prve upotrebe"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Broj ciklusa"</string>
@@ -1939,6 +1920,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Dodir u desnom donjem kutu"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Za više opcija dodirnite desni donji kut dodirne podloge"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Brzina pokazivača"</string>
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Stil ispunjavanja pokazivača"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Promjena ispunj. pokaz. na crno"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Promjena ispunj. pokaz. na zeleno"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Promjena ispunj. pokaz. na žuto"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Promjena ispunj. pokaz. na ružič."</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Promjena ispunj. pokaz. na plavo"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Učenje pokreta za dodirnu podlogu"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"dodirna površina, miš, pokazivač, pomicanje, prijeći prstom, kliknuti desnom tipkom, kliknuti, pokazivači"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"kliknuti desnom tipkom, dodirnuti"</string>
@@ -3003,7 +2990,7 @@
     <string name="user_cannot_add_accounts_message" msgid="2351326078338805337">"Ograničeni profili ne mogu dodavati račune"</string>
     <string name="user_remove_user_menu" msgid="2183714948094429367">"<xliff:g id="USER_NAME">%1$s</xliff:g>: brisanje s uređaja"</string>
     <string name="user_lockscreen_settings" msgid="4596612658981942092">"Postavke zaključavanja zaslona"</string>
-    <string name="user_add_on_lockscreen_menu" msgid="2539059062034644966">"Dodaj korisnika sa zaključanog zaslona"</string>
+    <string name="user_add_on_lockscreen_menu" msgid="2539059062034644966">"Dodaj korisnike sa zaključanog zaslona"</string>
     <string name="switch_to_dock_user_when_docked" msgid="2324395443311905635">"Na priključnoj stanici prijeđi na administratora"</string>
     <string name="user_confirm_remove_self_title" msgid="926265330805361832">"Izbrisati sebe?"</string>
     <string name="user_confirm_remove_title" msgid="3626559103278006002">"Želite li izbrisati ovog korisnika?"</string>
@@ -3347,6 +3334,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Dodajte kalendar"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Upotreba kalendara"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Raspored"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Raspored"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Utišaj telefon u određeno vrijeme"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Postavite pravila za način Ne uznemiravaj"</string>
@@ -3811,6 +3804,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Promijeni na opciju Samo alarmi na jedan sat do {time}}one{Promijeni na opciju Samo alarmi na # sat do {time}}few{Promijeni na opciju Samo alarmi na # sata do {time}}other{Promijeni na opciju Samo alarmi na # sati do {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Promijeni na \"Samo alarmi\" do <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Promijeni na \"Uvijek prekidaj\""</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Upozorenje"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Zatvori"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Pošalji povr. informacije o uređaju"</string>
@@ -4794,8 +4793,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Lijevo"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Desni"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Futrola"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Baterija"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Ploča postavki"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Nametni način rada na računalu"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Nameće eksperimentalni stolni način rada na sekundarnim zaslonima"</string>
