--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Atšaukti"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Ne dabar"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Sutinku"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Daugiau"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Atrakinimas naudojant veidą"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Atminkite"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Atrakinkite telefoną ir patvirtinkite pirkimo operacijas piršto atspaudu.\n\nPastaba: negalite atrakinti šio įrenginio piršto atspaudu. Norėdami gauti daugiau informacijos, susisiekite su organizacijos administratoriumi."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Atšaukti"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Ne dabar"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Sutinku"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Praleisti piršto antspaudą?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Piršto antspaudo sąranka užtrunka tik minutę ar dvi. Jei praleisite šį veiksmą, vėliau piršto antspaudą galėsite pridėti nustatymuose."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Kaskart, kai įrenginys užrakinamas"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Po 5 min., pasib. skirt. ekrano laikui"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Tik iš naujo paleidus įrenginį"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Jei naudojate kitą privačios erdvės užraktą, jums gali reikėti patvirtinti savo tapatybę, kad galėtumėte atidaryti programas savo privačioje erdvėje."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Privačios erdvės slėpimas"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Užrakintos privačios erdvės slėpimas"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Jei nenorite, kad kiti žmonės žinotų, jog turite privačią erdvę savo įrenginyje, galite slėpti ją programų sąraše"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Nustatyti"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privati erdvė"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Paslėpkite ir užrakinkite privačias programas atskiroje erdvėje. Norėdami užtikrinti papildomą saugą naudokite specialiai tam skirtą „Google“ paskyrą."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Kaip tai veikia"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Sukurkite „Google“ paskyrą savo erdvei"</b>\n"Jei naudosite specialiai tam skirtą paskyrą, sinchronizuoti failai, nuotraukos ir el. laiškai nebus pasiekiami už erdvės ribų"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Nustatykite užraktą"</b>\n"Užrakinkite erdvę, kad į ją nepatektų kiti žmonės."</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Įdiekite programų"</b>\n"Įdiekite programų, kurias norite laikyti privačiai savo erdvėje"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Ką verta atminti"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Programos sustabdomos, kai užrakinate erdvę"</b>\n"Kai užrakinate erdvę, erdvėje esančios programos sustabdomos ir negaunate iš jų pranešimų"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Programos privačioje erdvėje nebus rodomos leidimų tvarkytuvėje, privatumo informacijos suvestinėje ir kituose nustatymuose, kai privati erdvė bus užrakinta.\n\nPrivačios erdvės negalima perkelti į naują įrenginį. Turėsite nustatyti kitą privačią erdvę, jei norėsite ją naudoti kitame įrenginyje.\n\nBet kuris naudotojas, prijungęs jūsų įrenginį prie kompiuterio ar įdiegęs žalingų programų įrenginyje, galės pasiekti jūsų privačią erdvę."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Kai užrakinate erdvę, privačioje erdvėje esančios programos sustabdomos ir negaunate iš jų pranešimų.\n\nKai privati erdvė užrakinta, privačioje erdvėje esančios programos nebus rodomos leidimų tvarkytuvėje, privatumo informacijos suvestinėje ir kituose nustatymuose.\n\nPrivačios erdvės negalima atkurti naujame įrenginyje. Jei norite ją naudoti kitame įrenginyje, reikės sukurti kitą erdvę.\n\nAsmenys, prijungę jūsų įrenginį prie kompiuterio ar įrenginyje įdiegę kenkėjiškų programų, gali pasiekti jūsų privačią erdvę."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Sužinokite daugiau apie privačią erdvę"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Tai užtruks kelias akimirkas"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Nustatoma privati erdvė…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Galite nustatyti naują užraktą tik privačiai erdvei arba naudoti tą patį užraktą, kurį naudojate įrenginiui užrakinti"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Naudoti ekrano užraktą"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Pasirinkti naują užraktą"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Šiek tiek palaukite…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Viskas nustatyta!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Jei norite rasti privačią erdvę, eikite į programų sąrašą, tada slinkite žemyn"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Atlikta"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Privačios erdvės PIN kodo nustatymas"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Privačios erdvės slaptažodžio nustatymas"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Privačios erdvės atrakinimo piešinio nustatymas"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Kurkite „Google“ paskyrą ir apsaugokite duomenų privatumą"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Kitame ekrane galite prisijungti prie paskyros, kurią norite naudoti su privačia erdve"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Sukurkite specialiai tam skirtą paskyrą, kuri apsaugos, kad duomenys neišeitų iš privačios erdvės, pvz., toliau nurodyti."</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Sinchronizuotos nuotraukos, failai, el. laiškai, kontaktai, kalendoriaus įvykiai ir kiti duomenys"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Programų atsisiuntimo istorija ir rekomendacijos"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Naršymo istorija, žymės ir išsaugoti slaptažodžiai"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Siūlomas turinys susijęs su jūsų veikla privačios erdvės programose"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Supratau"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Užrakinimas"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Slėpimas"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Galite pridėti iki <xliff:g id="COUNT">%d</xliff:g> piršto ats."</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Sistemos sertifikatas"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Sertifikatų prisegimas"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Išsami tinklo info."</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Šiame tinkle naudojamas senesnis ir mažiau saugus saugos protokolas, vadinamas WEP"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Potinklio kaukė"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Serverio pavadinimas"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tipas"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Įrenginio „Wi‑Fi“ MAC adresas"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"„Bluetooth“ adresas"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Serijos numeris"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Veiksnumo koeficientas"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Pagaminimo data"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Pirmo naudojimo data"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Ciklų skaičius"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Palietus apačioje dešinėje"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Daugiau – palietus jutiklinės dalies apačioje dešinėje"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Žymiklio greitis"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Sužinokite jutiklinės dalies gestus"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"jutiklinė dalis, pelė, žymeklis, slinkti, perbraukti, spustelėti dešiniuoju klavišu, spustelėti"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"spustelėti dešiniuoju klavišu, paliesti"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Pridėti kalendorių"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Naudoti kalendorių"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Tvarkaraštis"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Tvarkaraštis"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Nutildykite telefoną tam tikru metu"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Nustatykite netrukdymo režimo taisykles"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Pakeisti į signalus tik vienai valandai iki {time}}one{Pakeisti į signalus tik # valandai iki {time}}few{Pakeisti į signalus tik # valandoms iki {time}}many{Pakeisti į signalus tik # valandos iki {time}}other{Pakeisti į signalus tik # valandų iki {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Pakeisti tik į signalus iki <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Pakeisti į pertraukimo nustatymą visam laikui"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Perspėjimas"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Uždaryti"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Siųsti atsiliepimą apie šį įrenginį"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Kairėje"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Dešinėje"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Dėklas"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Akumuliatorius"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Nustatymų skydelis"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Priverstinai įjungti darbalaukio režimą"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Priverstinai įjungti eksperimentinį darbalaukio režimą antriniuose ekranuose"</string>
