--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Зүүн чих хослуулах"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Сонсголын төхөөрөмжийн тохиргоо"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Товчлол, сонсголын төхөөрөмжийн зохицол"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Урьдчилсан тохируулгууд"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Урьдчилсан тохируулга"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Урьдчилсан тохируулгыг шинэчилж чадсангүй"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Аудио гаралт"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Аудио оролтын тухай"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Болих"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Одоо биш"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Би зөвшөөрч байна"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Бусад"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Таны царайгаар түгжээ тайлах"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Санамж"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Утасныхаа түгжээг тайлах, худалдан авалт зөвшөөрөхийн тулд хурууны хээгээ ашиглана уу.\n\nСанамж: Та хурууны хээгээр энэ төхөөрөмжийн түгжээг тайлах боломжгүй. Дэлгэрэнгүй мэдээлэл авахын тулд байгууллагынхаа админтай холбогдоно уу."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Цуцлах"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Одоо биш"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Би зөвшөөрч байна"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Хурууны хээг алгасах уу?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Хурууны хээг тохируулахад хэдхэн минут болно. Та үүнийг алгасвал хурууны хээгээ дараа тохиргоо хэсэгт нэмэх боломжтой."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Төхөөрөмж түгжигдэх бүрд"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Дэлгэц автоматаар амарснаас хойш 5 минут"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Зөвхөн төхөөрөмжийг дахин эхлүүлсний дараа"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Та хаалттай орон зайдаа өөр түгжээ ашиглавал хаалттай орон зайд тань байгаа аппуудыг нээхийн тулд өөрийгөө мөн болохыг баталгаажуулах шаардлагатай байж магадгүй."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Хаалттай орон зайг нуух"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Хаалттай орон зайг түгжээтэй үед нь нуух"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Таны төхөөрөмж дээр хаалттай орон зай байгаа болохыг бусад хүн мэдэхийг зогсоохын тулд та үүнийг аппуудынхаа жагсаалтаас нуух боломжтой"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Тохируулах"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Хаалттай орон зай"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Тусдаа орон зайд хувийн аппуудыг нуух эсвэл түгжинэ үү. Нэмэлт хамгаалалтад зориулалтын Google Бүртгэл ашиглана уу."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Энэ хэрхэн ажилладаг вэ?"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Орон зайдаа зориулж Google Бүртгэл үүсгэх"</b>\n"Хэрэв та зориулалтын бүртгэл ашиглавал энэ нь синк хийсэн файл, зураг, имэйлийг таны орон зайнаас гадуур харагдахыг зогсооход тусална"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Түгжээ тохируулах"</b>\n"Орон зайгаа түгжиж, бусад хүнийг үүнийг нээхийг зогсоогоорой"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Аппуудыг суулгах"</b>\n"Та орон зайдаа хувийн байлгахыг хүсэж буй аппуудаа суулгана уу"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Санамж"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Таныг орон зайгаа түгжихэд аппууд зогсдог"</b>\n"Таныг орон зайгаа түгжихэд таны орон зай дахь аппууд зогсох бөгөөд та тухайн аппуудаас мэдэгдэл хүлээн авахгүй"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Таны хаалттай орон зай түгжээтэй үед таны хаалттай орон зайн аппууд зөвшөөрлийн менежер, нууцлалын хяналтын самбар болон бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмж рүү зөөх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл өөр хаалттай орон зай тохируулах шаардлагатай.\n\nТаны төхөөрөмжийг компьютерт холбодог эсвэл таны төхөөрөмжид аюултай аппууд суулгадаг аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Таныг орон зайгаа түгжихэд таны хаалттай орон зай дахь аппуудыг зогсоох бөгөөд та тухайн аппуудаас мэдэгдэл хүлээн авахгүй.\n\nХаалттай орон зай түгжээтэй үед таны хаалттай орон зай дахь аппууд зөвшөөрлийн менежер, нууцлалын хяналтын самбар болон бусад тохиргоонд харагдахгүй.\n\nТаны хаалттай орон зайг шинэ төхөөрөмжид сэргээх боломжгүй. Хэрэв та үүнийг өөр төхөөрөмжид ашиглахыг хүсвэл өөр орон зай тохируулах шаардлагатай болно.\n\nТаны төхөөрөмжийг компьютерт холбох эсвэл таны төхөөрөмжид хортой апп суулгах аливаа хүн таны хаалттай орон зайд хандах боломжтой байж магадгүй."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Хаалттай орон зайн нэмэлт мэдээлэл авах"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Үүнд хэдэн хором зарцуулна"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Хаалттай орон зайг тохируулж байна…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Та зөвхөн хаалттай орон зайд шинэ түгжээ тохируулах эсвэл төхөөрөмжийнхөө түгжээг тайлахад ашигладаг ижил түгжээг ашиглах боломжтой"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Дэлгэцийн түгжээг ашиглах"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Шинэ түгжээ сонгох"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Түр хүлээнэ үү…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Тохируулж дууслаа!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Хаалттай орон зайгаа олохын тулд аппуудынхаа жагсаалт руу очоод, дараа нь доош гүйлгэнэ үү"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Болсон"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Хаалттай орон зайдаа ПИН тохируулна уу"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Хувийн орон зайдаа нууц үг тохируулна уу"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Хувийн орон зайдаа хээ тохируулна уу"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Өгөгдлөө хувийн байлгахад туслахын тулд Google Бүртгэл үүсгэх"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Дараагийн дэлгэц дээр та хаалттай орон зайтайгаа ашиглах бүртгэлд нэвтрэх боломжтой"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Өгөгдлийг хаалттай орон зайнаас гадуур гарч ирэхийг зогсооход туслахын тулд зориулалтын бүртгэл үүсгэнэ үү. Жишээлбэл:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Синк хийсэн зураг, файл, имэйл, харилцагч, календарийн үйл явдал болон бусад өгөгдөл"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Аппын таталтын түүх болон зөвлөмжүүд"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Хөтчийн түүх, хавчуурга болон хадгалсан нууц үгнүүд"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Таны хаалттай орон зайн аппуудын үйл ажиллагаатай холбоотой санал болгосон контент"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Ойлголоо"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Түгжээ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Нуух"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Та <xliff:g id="COUNT">%d</xliff:g> хүртэлх хурууны хээ нэмж болно"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Системийн сертификат"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Сертификат бэхлэх"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Сүлжээний мэдээлэл"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Энэ сүлжээ WEP хэмээх нэртэй аюулгүй байдлын хуучин протоколыг ашигладаг бөгөөд энэ нь хамгаалалт багатай байдаг"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Subnet маск"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Серверийн нэр"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Төрөл"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Төхөөрөмжийн Wi‑Fi MAC хаяг"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth хаяг"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Серийн дугаар"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Хэвийн ажиллагаатай үе"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Үйлдвэрлэсэн огноо"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Анх ашигласан огноо"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Мөчлөгийн тоо"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Баруун доод буланг товших"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Бусад сонголтыг авах бол мэдрэгч самбарын баруун доод буланг товших"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Заагчийн хурд"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Мэдрэгч самбарын зангааг мэдэж авах"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"мэдрэгч самбар, мэдрэгч самбар, хулгана, курсор, гүйлгэх, шудрах, баруун талыг товших, товших, заагч"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"баруун талыг товших, товших"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Календарь нэмээрэй"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Календариа ашиглаарай"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Хуваарь"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Хуваарь"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Утасны дууг тодорхой цагт хаах"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Бүү саад бол горимын дүрмийг тохируулах"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{{time} хүртэл зөвхөн нэг цагийн турш сэрүүлэг болгож өөрчилнө}other{{time} хүртэл зөвхөн # цагийн турш сэрүүлэг болгож өөрчилнө}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"<xliff:g id="FORMATTEDTIME">%1$s</xliff:g> хүртэл анхааруулах горимд шилжих"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Үргэлж саад бол горимд шилжих"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Сануулга"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Хаах"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Энэ төхөөрөмжийн талаар санал илгээх"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Зүүн"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Баруун"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Гэр"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Батарей"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Тохиргооны самбар"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Дэлгэцийн горимыг хүчлэх"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Дэлгэцийн туршилтын горимыг хоёрдогч дэлгэцэд хүчлэх"</string>
