--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"ਰੱਦ ਕਰੋ"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"ਹਾਲੇ ਨਹੀਂ"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"ਮੈਂ ਸਹਿਮਤ ਹਾਂ"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"ਹੋਰ"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"ਆਪਣੇ ਚਿਹਰੇ ਨਾਲ ਅਣਲਾਕ ਕਰੋ"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"ਧਿਆਨ ਵਿੱਚ ਰੱਖੋ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"ਆਪਣੇ ਫ਼ੋਨ ਨੂੰ ਅਣਲਾਕ ਕਰਨ ਜਾਂ ਖਰੀਦਾਂ ਨੂੰ ਮਨਜ਼ੂਰ ਕਰਨ ਲਈ ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਦੀ ਵਰਤੋਂ ਕਰੋ। \n\nਨੋਟ ਕਰੋ: ਤੁਸੀਂ ਇਸ ਡੀਵਾਈਸ ਨੂੰ ਅਣਲਾਕ ਕਰਨ ਲਈ ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਦੀ ਵਰਤੋਂ ਨਹੀਂ ਕਰ ਸਕਦੇ। ਵਧੇਰੇ ਜਾਣਕਾਰੀ ਲਈ, ਆਪਣੇ ਸੰਗਠਨ ਦੇ ਪ੍ਰਸ਼ਾਸਕ ਨਾਲ ਸੰਪਰਕ ਕਰੋ।"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"ਰੱਦ ਕਰੋ"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"ਹਾਲੇ ਨਹੀਂ"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"ਮੈਂ ਸਹਿਮਤ ਹਾਂ"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"ਕੀ ਫਿੰਗਰਪ੍ਰਿੰਟ ਛੱਡਣਾ ਹੈ?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"ਫਿੰਗਰਪ੍ਰਿੰਟ ਸੈੱਟਅੱਪ ਵਿੱਚ ਸਿਰਫ਼ ਇੱਕ ਜਾਂ ਦੋ ਮਿੰਟ ਲੱਗਦੇ ਹਨ। ਜੇਕਰ ਤੁਸੀਂ ਇਸ ਨੂੰ ਛੱਡ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਤੁਸੀਂ ਬਾਅਦ ਵਿੱਚ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਜਾ ਕੇ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਸ਼ਾਮਲ ਕਰ ਸਕਦੇ ਹੋ।"</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"ਹਰ ਵਾਰ ਡੀਵਾਈਸ ਦੇ ਲਾਕ ਹੋਣ \'ਤੇ"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"ਸਕ੍ਰੀਨ ਸਮਾਂ ਸਮਾਪਤ ਦੇ 5 ਮਿੰਟ ਬਾਅਦ"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"ਸਿਰਫ਼ ਡੀਵਾਈਸ ਦੇ ਮੁੜ-ਚਾਲੂ ਹੋਣ \'ਤੇ"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"ਜੇ ਤੁਸੀਂ ਆਪਣੇ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਵੱਖਰੇ ਲਾਕ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਨੂੰ ਆਪਣੇ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਿੱਚ ਐਪਾਂ ਖੋਲ੍ਹਣ ਲਈ ਆਪਣੀ ਪਛਾਣ ਦੀ ਪੁਸ਼ਟੀ ਕਰਨ ਦੀ ਲੋੜ ਹੋ ਸਕਦੀ ਹੈ।"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲੁਕਾਉਣਾ"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਾਕ ਹੋਣ \'ਤੇ ਇਸਨੂੰ ਲੁਕਾਉਣਾ"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"ਹੋਰ ਲੋਕਾਂ ਤੋਂ ਤੁਹਾਡੇ ਡੀਵਾਈਸ \'ਤੇ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਦੀ ਮੌਜੂਦਗੀ ਨੂੰ ਲੁਕਾਉਣ ਲਈ, ਤੁਸੀਂ ਇਸਨੂੰ ਆਪਣੀ ਐਪ ਸੂਚੀ ਤੋਂ ਲੁਕਾ ਸਕਦੇ ਹੋ"</string>
@@ -603,27 +600,21 @@
     <string name="private_space_delete_failed" msgid="7705795653796174741">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਮਿਟਾਇਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"</string>
     <string name="private_space_unlocked" msgid="9091600948712932046">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਅਣਲਾਕ ਕੀਤਾ ਗਿਆ"</string>
     <string name="no_device_lock_title" msgid="1078223464721029954">"ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="no_device_lock_summary" msgid="7436025227616244687">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਵਰਤਣ ਲਈ, ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="no_device_lock_summary" msgid="7436025227616244687">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਰਤਣ ਲਈ, ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
     <string name="no_device_lock_action_label" msgid="2640487005629001288">"ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
     <string name="no_device_lock_cancel" msgid="4412602160321228863">"ਰੱਦ ਕਰੋ"</string>
     <string name="private_space_cancel_label" msgid="379259667396956886">"ਰੱਦ ਕਰੋ"</string>
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"ਸੈੱਟਅੱਪ ਕਰੋ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ"</string>
-    <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ਨਿੱਜੀ ਐਪਾਂ ਨੂੰ ਕਿਸੇ ਵੱਖਰੀ ਸਪੇਸ \'ਤੇ ਲੁਕਾਓ ਜਾਂ ਲਾਕ ਕਰੋ। ਵਾਧੂ ਸੁਰੱਖਿਆ ਲਈ ਸਮਰਪਿਤ Google ਖਾਤਾ ਵਰਤੋ।"</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ਪ੍ਰਾਈਵੇਟ ਐਪਾਂ ਨੂੰ ਕਿਸੇ ਵੱਖਰੀ ਸਪੇਸ \'ਤੇ ਲੁਕਾਓ ਜਾਂ ਲਾਕ ਕਰੋ। ਵਾਧੂ ਸੁਰੱਖਿਆ ਲਈ ਸਮਰਪਿਤ Google ਖਾਤਾ ਵਰਤੋ।"</string>
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"ਇਸਦੇ ਕੰਮ ਕਰਨ ਦਾ ਤਰੀਕਾ"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"ਆਪਣੀ ਸਪੇਸ ਲਈ ਇੱਕ Google ਖਾਤਾ ਬਣਾਓ"</b>\n"ਜੇ ਤੁਸੀਂ ਇੱਕ ਸਮਰਪਿਤ ਖਾਤਾ ਵਰਤਦੇ ਹੋ, ਤਾਂ ਇਹ ਸਿੰਕ ਕੀਤੀਆਂ ਫ਼ਾਈਲਾਂ, ਫ਼ੋਟੋਆਂ ਅਤੇ ਈਮੇਲਾਂ ਨੂੰ ਤੁਹਾਡੀ ਸਪੇਸ ਤੋਂ ਬਾਹਰ ਦਿਖਾਈ ਦੇਣ ਤੋਂ ਰੋਕਣ ਵਿੱਚ ਮਦਦ ਕਰਦਾ ਹੈ"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ਲਾਕ ਸੈੱਟ ਕਰੋ"</b>\n"ਆਪਣੀ ਸਪੇਸ ਨੂੰ ਲਾਕ ਕਰੋ ਤਾਂ ਜੋ ਹੋਰ ਲੋਕਾਂ ਨੂੰ ਇਸਨੂੰ ਖੋਲ੍ਹਣ ਤੋਂ ਰੋਕਿਆ ਜਾ ਸਕੇ"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"ਐਪਾਂ ਸਥਾਪਤ ਕਰੋ"</b>\n"ਉਨ੍ਹਾਂ ਐਪਾਂ ਨੂੰ ਸਥਾਪਤ ਕਰੋ ਜਿਨ੍ਹਾਂ ਨੂੰ ਤੁਸੀਂ ਆਪਣੀ ਸਪੇਸ ਵਿੱਚ ਪ੍ਰਾਈਵੇਟ ਰੱਖਣਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"ਧਿਆਨ ਵਿੱਚ ਰੱਖੋ"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"ਜਦੋਂ ਤੁਸੀਂ ਆਪਣੀ ਸਪੇਸ ਨੂੰ ਲਾਕ ਕਰ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਐਪਾਂ ਬੰਦ ਹੋ ਜਾਂਦੀਆਂ ਹਨ"</b>\n"ਜਦੋਂ ਤੁਸੀਂ ਆਪਣੀ ਸਪੇਸ ਨੂੰ ਲਾਕ ਕਰ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੀ ਸਪੇਸ ਵਿਚਲੀਆਂ ਐਪਾਂ ਬੰਦ ਹੋ ਜਾਂਦੀਆਂ ਹਨ ਅਤੇ ਤੁਹਾਨੂੰ ਉਨ੍ਹਾਂ ਤੋਂ ਸੂਚਨਾਵਾਂ ਪ੍ਰਾਪਤ ਨਹੀਂ ਹੋਣਗੀਆਂ"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"ਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਾਕ ਹੋਣ \'ਤੇ ਇਜਾਜ਼ਤ ਪ੍ਰਬੰਧਕ, ਪਰਦੇਦਾਰੀ ਸੰਬੰਧੀ ਡੈਸ਼ਬੋਰਡ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਿਚਲੀਆਂ ਐਪਾਂ ਦਿਖਾਈ ਨਹੀਂ ਦੇਣਗੀਆਂ।\n\nਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਨਵੇਂ ਡੀਵਾਈਸ \'ਤੇ ਨਹੀਂ ਲਿਜਾਇਆ ਜਾ ਸਕਦਾ। ਜੇ ਤੁਸੀਂ ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਕਿਸੇ ਹੋਰ ਡੀਵਾਈਸ \'ਤੇ ਵਰਤਣਾ ਚਾਹੁੰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਨੂੰ ਇੱਕ ਹੋਰ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਦੀ ਲੋੜ ਪਵੇਗੀ।\n\nਜਦੋਂ ਕੋਈ ਵਿਅਕਤੀ ਤੁਹਾਡੇ ਡੀਵਾਈਸ ਨੂੰ ਕਿਸੇ ਕੰਪਿਊਟਰ ਨਾਲ ਕਨੈਕਟ ਕਰਦਾ ਹੈ ਜਾਂ ਤੁਹਾਡੇ ਡੀਵਾਈਸ \'ਤੇ ਨੁਕਸਾਨਦੇਹ ਐਪਾਂ ਸਥਾਪਤ ਕਰਦਾ ਹੈ, ਤਾਂ ਉਹ ਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਤੱਕ ਪਹੁੰਚ ਕਰ ਸਕਦਾ ਹੈ।"</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"ਜਦੋਂ ਤੁਸੀਂ ਆਪਣੀ ਸਪੇਸ ਨੂੰ ਲਾਕ ਕਰ ਦਿੰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਿਚਲੀਆਂ ਐਪਾਂ ਬੰਦ ਹੋ ਜਾਂਦੀਆਂ ਹਨ ਅਤੇ ਤੁਹਾਨੂੰ ਉਨ੍ਹਾਂ ਤੋਂ ਸੂਚਨਾਵਾਂ ਪ੍ਰਾਪਤ ਨਹੀਂ ਹੋਣਗੀਆਂ।\n\nਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਾਕ ਹੋਣ \'ਤੇ ਇਜਾਜ਼ਤ ਪ੍ਰਬੰਧਕ, ਪਰਦੇਦਾਰੀ ਸੰਬੰਧੀ ਡੈਸ਼ਬੋਰਡ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਿਚਲੀਆਂ ਐਪਾਂ ਦਿਖਾਈ ਨਹੀਂ ਦੇਣਗੀਆਂ।\n\nਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਨਵੇਂ ਡੀਵਾਈਸ \'ਤੇ ਮੁੜ-ਬਹਾਲ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਜੇ ਤੁਸੀਂ ਇਸਨੂੰ ਕਿਸੇ ਹੋਰ ਡੀਵਾਈਸ \'ਤੇ ਵਰਤਣਾ ਚਾਹੁੰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਨੂੰ ਇੱਕ ਹੋਰ ਸਪੇਸ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਦੀ ਲੋੜ ਪਵੇਗੀ।\n\nਜਦੋਂ ਕੋਈ ਵਿਅਕਤੀ ਤੁਹਾਡੇ ਡੀਵਾਈਸ ਨੂੰ ਕਿਸੇ ਕੰਪਿਊਟਰ ਨਾਲ ਕਨੈਕਟ ਕਰਦਾ ਹੈ ਜਾਂ ਤੁਹਾਡੇ ਡੀਵਾਈਸ \'ਤੇ ਨੁਕਸਾਨਦੇਹ ਐਪਾਂ ਸਥਾਪਤ ਕਰਦਾ ਹੈ, ਤਾਂ ਉਹ ਤੁਹਾਡੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਤੱਕ ਪਹੁੰਚ ਕਰ ਸਕਦਾ ਹੈ।"</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਬਾਰੇ ਹੋਰ ਜਾਣੋ"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"ਇਸ ਵਿੱਚ ਕੁਝ ਸਮਾਂ ਲੱਗੇਗਾ"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਦਾ ਸੈੱਟਅੱਪ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"ਤੁਸੀਂ ਬਸ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਨਵੇਂ ਲਾਕ ਨੂੰ ਸੈੱਟ ਕਰ ਸਕਦੇ ਹੋ ਜਾਂ ਬਿਲਕੁਲ ਉਹੀ ਲਾਕ ਵਰਤੋ ਜੋ ਤੁਸੀਂ ਆਪਣੇ ਡੀਵਾਈਸ ਨੂੰ ਅਣਲਾਕ ਕਰਨ ਲਈ ਵਰਤਦੇ ਹੋ"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"ਸਕ੍ਰੀਨ ਲਾਕ ਵਰਤੋ"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"ਨਵਾਂ ਲਾਕ ਚੁਣੋ"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"ਬਸ ਇੱਕ ਸਕਿੰਟ…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"ਸਭ ਹੋ ਗਿਆ!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲੱਭਣ ਲਈ, ਆਪਣੀ ਐਪ ਸੂਚੀ \'ਤੇ ਜਾ ਕੇ ਹੇਠਾਂ ਵੱਲ ਸਕ੍ਰੋਲ ਕਰੋ"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"ਹੋ ਗਿਆ"</string>
@@ -642,19 +634,11 @@
     <string name="private_space_retry_summary" msgid="1920444015972648774">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨਾਲ ਵਰਤਣ ਲਈ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ-ਇਨ ਕਰੋ"</string>
     <string name="private_space_skip_login_label" msgid="7078019409056628192">"ਹਾਲੇ ਨਹੀਂ"</string>
     <string name="private_space_continue_login_label" msgid="7779965766333065391">"ਜਾਰੀ ਰੱਖੋ"</string>
-    <string name="private_space_lock_setup_title" msgid="6541564212199510787">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਲਾਕ ਚੁਣੋ"</string>
+    <string name="private_space_lock_setup_title" msgid="6541564212199510787">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਲਾਕ ਚੁਣੋ"</string>
     <string name="private_space_lock_setup_description" msgid="423405593476300918">"ਤੁਸੀਂ ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਦੀ ਵਰਤੋਂ ਕਰ ਕੇ ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਅਣਲਾਕ ਕਰ ਸਕਦੇ ਹੋ। ਸੁਰੱਖਿਆ ਲਈ, ਇਸ ਵਿਕਲਪ ਨੂੰ ਬੈਕਅੱਪ ਲਾਕ ਦੀ ਲੋੜ ਹੈ।"</string>
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪਿੰਨ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਪੈਟਰਨ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"ਆਪਣੇ ਡਾਟੇ ਨੂੰ ਨਿੱਜੀ ਰੱਖਣ ਵਿੱਚ ਮਦਦ ਲਈ Google ਖਾਤਾ ਬਣਾਓ"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"ਅਗਲੀ ਸਕ੍ਰੀਨ ’ਤੇ, ਤੁਸੀਂ ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨਾਲ ਵਰਤਣ ਲਈ ਕਿਸੇ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ-ਇਨ ਕਰ ਸਕਦੇ ਹੋ"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"ਡਾਟੇ ਨੂੰ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਤੋਂ ਬਾਹਰ ਦਿਸਣ ਤੋਂ ਰੋਕਣ ਵਿੱਚ ਮਦਦ ਲਈ ਸਮਰਪਿਤ ਖਾਤਾ ਬਣਾਓ, ਜਿਵੇਂ ਕਿ:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"ਸਿੰਕ ਕੀਤੀਆਂ ਫ਼ੋਟੋਆਂ, ਫ਼ਾਈਲਾਂ, ਈਮੇਲਾਂ, ਸੰਪਰਕ, ਕੈਲੰਡਰ ਇਵੈਂਟ ਅਤੇ ਹੋਰ ਡਾਟਾ"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"ਐਪ ਡਾਊਨਲੋਡ ਇਤਿਹਾਸ ਅਤੇ ਸਿਫ਼ਾਰਸ਼ਾਂ"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"ਬ੍ਰਾਊਜ਼ਿੰਗ ਇਤਿਹਾਸ, ਬੁੱਕਮਾਰਕ ਅਤੇ ਰੱਖਿਅਤ ਕੀਤੇ ਪਾਸਵਰਡ"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਐਪਾਂ ਵਿੱਚ ਤੁਹਾਡੀ ਸਰਗਰਮੀ ਨਾਲ ਸੰਬੰਧਿਤ ਸੁਝਾਈ ਗਈ ਸਮੱਗਰੀ"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"ਸਮਝ ਲਿਆ"</string>
+    <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪੈਟਰਨ ਸੈੱਟ ਕਰੋ"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"ਲਾਕ ਕਰੋ"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"ਲੁਕਾਓ"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ਤੁਸੀਂ <xliff:g id="COUNT">%d</xliff:g> ਤੱਕ ਫਿੰਗਰਪ੍ਰਿੰਟ ਸ਼ਾਮਲ ਕਰ ਸਕਦੇ ਹੋ"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"ਸਿਸਟਮ ਪ੍ਰਮਾਣ-ਪੱਤਰ"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"ਪ੍ਰਮਾਣ-ਪੱਤਰ ਪਿੰਨ ਕਰਨ ਦੀ ਸੁਵਿਧਾ"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"ਨੈੱਟਵਰਕ ਵੇਰਵੇ"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"ਇਹ ਨੈੱਟਵਰਕ WEP ਨਾਮ ਦੇ ਕਿਸੇ ਪੁਰਾਣੇ ਸੁਰੱਖਿਆ ਪ੍ਰੋਟੋਕੋਲ ਦੀ ਵਰਤੋਂ ਕਰਦਾ ਹੈ, ਜੋ ਕਿ ਘੱਟ ਸੁਰੱਖਿਅਤ ਹੈ"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"ਸਬਨੈੱਟ ਮਾਸਕ"</string>
     <string name="server_name_title" msgid="7257095185810299066">"ਸਰਵਰ ਦਾ ਨਾਮ"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"ਕਿਸਮ"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"ਡੀਵਾਈਸ ਵਾਈ-ਫਾਈ MAC ਪਤਾ"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"ਬਲੂਟੁੱਥ ਪਤਾ"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"ਸੀਰੀਅਲ ਨੰਬਰ"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"ਕਿਰਿਆਸ਼ੀਲ ਸਮਾਂ"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"ਬਣਾਉਣ ਦੀ ਤਾਰੀਖ"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"ਪਹਿਲੀ ਵਰਤੋਂ ਦੀ ਤਾਰੀਖ"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"ਸਾਈਕਲ ਕਾਊਂਟ"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"ਹੇਠਲਾ-ਸੱਜਾ ਟੈਪ"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"ਹੋਰ ਵਿਕਲਪਾਂ ਲਈ ਟੱਚਪੈਡ ਦੇ ਹੇਠਲੇ ਸੱਜੇ ਕੋਨੇ \'ਤੇ ਟੈਪ ਕਰੋ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"ਪੁਆਇੰਟਰ ਸਪੀਡ"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"ਟੱਚਪੈਡ ਇਸ਼ਾਰਿਆਂ ਬਾਰੇ ਜਾਣੋ"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"ਟਰੈਕਪੈਡ, ਟਰੈਕ ਪੈਡ, ਮਾਊਸ, ਕਰਸਰ, ਸਕ੍ਰੋਲ ਕਰੋ, ਸਵਾਈਪ ਕਰੋ, ਸੱਜਾ ਕਲਿੱਕ, ਕਲਿੱਕ ਕਰੋ, ਪੁਆਇੰਟ"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"ਸੱਜਾ ਕਲਿੱਕ, ਟੈਪ ਕਰੋ"</string>
@@ -2043,7 +2037,7 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ਰੰਗ ਅਤੇ ਮੋਸ਼ਨ"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ਰੰਗ ਦਾ ਕੰਟ੍ਰਾਸਟ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ਜ਼ਿਆਦਾ ਕੰਟ੍ਰਾਸਟ ਨਾਲ ਲਿਖਤ, ਬਟਨ ਅਤੇ ਪ੍ਰਤੀਕ ਹੋਰ ਵੀ ਵੱਖਰੇ ਨਜ਼ਰ ਆਉਂਦੇ ਹਨ। ਤੁਹਾਨੂੰ ਸਭ ਤੋਂ ਵਧੀਆ ਦਿਸਣ ਵਾਲਾ ਕੰਟ੍ਰਾਸਟ ਚੁਣੋ।"</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"ਸ਼ਾਇਦ ਕੁਝ ਐਪਾਂ ਸਾਰੀਆਂ ਰੰਗ ਅਤੇ ਲਿਖਤ ਦੀਆਂ ਕੰਟ੍ਰਾਸਟ ਸੈਟਿੰਗਾਂ ਦਾ ਸਮਰਥਨ ਨਾ ਕਰਨ"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਕੁਝ ਐਪਾਂ ਸਾਰੀਆਂ ਰੰਗ ਅਤੇ ਲਿਖਤ ਦੀਆਂ ਕੰਟ੍ਰਾਸਟ ਸੈਟਿੰਗਾਂ ਦਾ ਸਮਰਥਨ ਨਾ ਕਰਨ"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"ਪੂਰਵ-ਝਲਕ ਦੇਖੋ"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"ਹੈਲਨ, ਐਡਮ"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 ਦਿਨ ਪਹਿਲਾਂ"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"ਕੋਈ ਕੈਲੰਡਰ ਸ਼ਾਮਲ ਕਰੋ"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"ਆਪਣਾ ਕੈਲੰਡਰ ਵਰਤੋ"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"ਸਮਾਂ-ਸੂਚੀ"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"ਸਮਾਂ-ਸੂਚੀ"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"ਕੁਝ ਖਾਸ ਸਮਿਆਂ \'ਤੇ ਫ਼ੋਨ ਸ਼ਾਂਤ ਰੱਖੋ"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"\'ਪਰੇਸ਼ਾਨ ਨਾ ਕਰੋ\' ਦੇ ਨਿਯਮ ਸੈੱਟ ਕਰੋ"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{{time} ਤੱਕ ਸਿਰਫ਼ ਇੱਕ ਘੰਟੇ ਲਈ ਅਲਾਰਮਾਂ ਵਿੱਚ ਬਦਲੋ}one{{time} ਤੱਕ ਸਿਰਫ਼ # ਘੰਟੇ ਲਈ ਅਲਾਰਮਾਂ ਵਿੱਚ ਬਦਲੋ}other{{time} ਤੱਕ ਸਿਰਫ਼ # ਘੰਟਿਆਂ ਲਈ ਅਲਾਰਮਾਂ ਵਿੱਚ ਬਦਲੋ}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"ਅਲਾਰਮ ਨੂੰ ਸਿਰਫ਼ <xliff:g id="FORMATTEDTIME">%1$s</xliff:g> ਤੱਕ ਬਦਲੋ"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"ਹਮੇਸ਼ਾਂ ਵਿਘਨ ਪਾਓ ਵਿੱਚ ਬਦਲੋ"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"ਚਿਤਾਵਨੀ"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"ਬੰਦ ਕਰੋ"</string>
     <string name="device_feedback" msgid="5351614458411688608">"ਇਸ ਡੀਵਾਈਸ ਬਾਰੇ ਵਿਚਾਰ ਭੇਜੋ"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"ਖੱਬਾ"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"ਸੱਜਾ"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"ਕੇਸ"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"ਬੈਟਰੀ"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"ਸੈਟਿੰਗਾਂ ਪੈਨਲ"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"ਡੈਸਕਟਾਪ ਮੋਡ ਜ਼ਬਰਦਸਤੀ ਲਾਗੂ ਕਰੋ"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"ਸੈਕੰਡਰੀ ਡਿਸਪਲੇ \'ਤੇ ਪ੍ਰਯੋਗਮਈ ਡੈਸਕਟਾਪ ਮੋਡ ਜ਼ਬਰਦਸਤੀ ਲਾਗੂ ਕਰੋ"</string>
