--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Asociază urechea stângă"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Setări pentru aparate auditive"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Comandă rapidă, compatibilitate cu aparatele auditive"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Presetări"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Presetare"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Nu s-a putut actualiza presetarea"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Ieșire audio"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Despre ieșirea audio"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Anulează"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Nu acum"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Accept"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Mai multe"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Deblochează folosindu-ți chipul"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Reține"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Folosește amprenta ca să deblochezi telefonul sau să aprobi achizițiile.\n\nNotă: nu îți poți folosi amprenta ca să deblochezi acest dispozitiv. Pentru informații suplimentare, contactează administratorul organizației."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Anulează"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Nu acum"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Accept"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Omiți amprenta?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Setarea amprentei durează doar un minut sau două. Dacă ignori acest pas acum, poți adăuga amprenta mai târziu din setări."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"La fiecare blocare a dispozitivului"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"Cinci minute după dezactivarea ecranului"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Doar după ce dispozitivul repornește"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Dacă folosești altă blocare pentru spațiul privat, poate fi nevoie să-ți confirmi identitatea ca să deschizi aplicații în spațiul privat."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Ascunde spațiul privat"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Ascunde spațiul privat când este blocat"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Pentru ca alții să nu știe că ai un spațiu privat pe dispozitiv, ascunde-l din lista de aplicații"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Configurează"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Spațiu privat"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Ascunde sau blochează aplicațiile private într-un spațiu separat. Folosește un Cont Google dedicat pentru mai multă securitate."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Cum funcționează"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Creează un Cont Google pentru spațiul tău"</b>\n"Dacă folosești un cont dedicat, fișierele, fotografiile și e-mailurile sincronizate nu vor apărea în afara spațiului tău"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Setează o blocare"</b>\n"Blochează spațiul pentru ca alte persoane să nu-l poată deschide"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Instalează aplicații"</b>\n"Instalează aplicațiile pe care vrei să le păstrezi private în spațiul tău"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Reține"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Aplicațiile se opresc când îți blochezi spațiul"</b>\n"Când îți blochezi spațiul, aplicațiile din spațiul tău sunt oprite și nu vei mai primi notificări de la ele"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplicațiile din spațiul privat nu vor apărea în managerul de permisiuni, în tabloul de bord de confidențialitate și în alte setări atunci când spațiul privat este blocat.\n\nSpațiul privat nu poate fi mutat pe un dispozitiv nou. Va trebui să configurezi alt spațiu privat dacă vrei să-l folosești pe alt dispozitiv.\n\nOricine îți conectează dispozitivul la un computer sau instalează aplicații dăunătoare pe dispozitiv poate să îți acceseze spațiul privat."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Când îți blochezi spațiul, aplicațiile din spațiul tău privat vor fi oprite și nu vei mai primi notificări de la ele.\n\nAplicațiile din spațiul privat nu vor apărea în Managerul de permisiuni, în tabloul de bord de confidențialitate și în alte setări atunci când spațiul privat este blocat.\n\nSpațiul privat nu poate fi restabilit pe un dispozitiv nou. Va fi necesar să configurezi alt spațiu, dacă vrei să îl folosești pe alt dispozitiv.\n\nOrice persoană care conectează dispozitivul tău la un computer sau instalează aplicații rău-intenționate pe dispozitivul tău poate să îți acceseze spațiul privat."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Află mai multe despre spațiul privat"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Procesul va dura câteva momente"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Se configurează spațiul privat…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Poți să setezi o nouă blocare doar pentru spațiul privat sau să folosești aceeași blocare pe care o folosești pentru a debloca dispozitivul."</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Folosește blocarea ecranului"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Alege o nouă blocare"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"O secundă…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Gata!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Pentru a găsi spațiul privat, accesează lista de aplicații, apoi derulează în jos"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Gata"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Setează un PIN pentru spațiul privat"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Setează o parolă pentru spațiul privat"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Setează un model pentru spațiul privat"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Creează un Cont Google pentru a-ți păstra datele private"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Pe următorul ecran, poți să te conectezi la un cont pe care să-l folosești cu spațiul privat"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Creează un cont dedicat pentru a împiedica datele să apară în afara spațiului privat, de exemplu:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Fotografii, fișiere, e-mailuri, agenda, evenimente din calendar și alte date sincronizate"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Istoricul descărcărilor de aplicații și recomandări"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Istoricul de navigare, marcaje și parole salvate"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Conținut sugerat care are legătură cu activitatea ta în aplicațiile din spațiul privat"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"OK"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Blochează"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Ascunde"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Poți să adaugi până la <xliff:g id="COUNT">%d</xliff:g> amprente"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certificat de sistem"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fixarea certificatelor"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Detaliile rețelei"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Rețeaua folosește un protocol de securitate mai vechi, numit WEP, care este mai puțin sigur"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Mască de subrețea"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Numele serverului"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Tip"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adresa MAC Wi-Fi a dispozitivului"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adresă Bluetooth"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Număr de serie"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Durată de funcționare"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Data fabricării"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Data primei folosiri"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Numărul de cicluri"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Atingere în dreapta jos"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Atinge colțul din dreapta jos al touchpadului pentru alte opțiuni"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Viteza indicatorului"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Învață gesturi pentru touchpad"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"trackpad, track pad, mouse, cursor, derulează, glisează, dă clic dreapta, dă clic, indicator"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"dă clic dreapta, atinge"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Adaugă un calendar"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Folosește-ți calendarul"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Program"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Program"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Dezactivează sunetul uneori"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Setează regulile pentru Nu deranja"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Schimbă la Numai alarme pentru o oră, până la {time}}few{Schimbă la Numai alarme pentru # ore, până la {time}}other{Schimbă la Numai alarme pentru # de ore, până la {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Schimbă la „Numai alarme” până la <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Schimbă la „Întrerupe întotdeauna”"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Avertisment"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Închide"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Trimite feedback despre dispozitiv"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Stânga"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Dreapta"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Carcasă"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Bateria"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Panou de setări"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Forțează modul desktop"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Forțează modul desktop experimental pe ecrane secundare"</string>
