--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -75,7 +75,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"Çifto anën e majtë"</string>
     <string name="bluetooth_hearing_device_settings_title" msgid="6060072560486755057">"Cilësimet e pajisjes ndihmëse për dëgjimin"</string>
     <string name="bluetooth_hearing_device_settings_summary" msgid="3822646075744075158">"Shkurtore, përputhshmëria me aparatet e dëgjimit"</string>
-    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Paravendosjet"</string>
+    <string name="bluetooth_hearing_aids_presets" msgid="4615094985857156388">"Paravendosja"</string>
     <string name="bluetooth_hearing_aids_presets_error" msgid="2095249829735188484">"Paravendosja nuk mund të përditësohej"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"Dalja e audios"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"Rreth daljes së audios"</string>
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Anulo"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Jo tani"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Pranoj"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Më shumë"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Shkyç me fytyrë"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Ki parasysh"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Përdor gjurmën e gishtit për të shkyçur telefonin ose për të miratuar blerjet.\n\nShënim. Nuk mund ta përdorësh gjurmën tënde të gishtit për ta shkyçur këtë pajisje. Për më shumë informacione, kontakto me administratorin e organizatës tënde."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Anulo"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Jo tani"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Pranoj"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Të kapërcehet gjurma e gishtit?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Konfigurimi i gjurmës së gishtit zgjat vetëm një ose dy minuta. Nëse e kapërcen këtë, mund ta shtosh gjurmën tënde të gishtit më vonë te \"Cilësimet\"."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Sa herë që kyçet pajisja"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 minuta pas kohës së pritjes së ekranit"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Vetëm pasi pajisja të riniset"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Nëse përdor një kyçje tjetër për hapësirën tënde private, mund të duhet të verifikosh që je ti për të hapur aplikacionet në hapësirën tënde private."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Fshihe hapësirën private"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Fshihe hapësirën private kur është e kyçur"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Për të mos i lejuar të tjerët të dinë se ke një hapësirë private në pajisjen tënde, mund ta fshehësh atë nga lista jote e aplikacioneve"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Konfiguro"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Hapësira private"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Fshih ose kyç aplikacionet private në një hapësirë të veçantë. Përdor një \"Llogari të posaçme të Google\" për më shumë siguri."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Si funksionon"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Krijo një \"Llogari të Google\" për hapësirën tënde"</b>\n"Nëse përdor një llogari të posaçme, kjo të ndihmon të ndalosh që skedarët, fotografitë dhe email-et e sinkronizuara të mos shfaqen jashtë hapësirës sate"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Cakto një kyçje"</b>\n"Kyçe hapësirën tënde për t\'i ndaluar të tjerët që të mos e hapin atë"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Instalo aplikacionet"</b>\n"Instalo aplikacionet që dëshiron t\'i mbash private në hapësirën tënde"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Ki parasysh"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Aplikacionet ndalojnë kur ti e kyç hapësirën"</b>\n"Kur e kyç hapësirën, aplikacionet në hapësirën tënde ndalojnë dhe nuk do të marrësh njoftime nga ato"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Aplikacionet në hapësirën tënde private nuk do të shfaqen në menaxherin e lejeve, panelin e privatësisë dhe cilësimet e tjera kur hapësira jote private është e kyçur.\n\nHapësira jote private nuk mund të zhvendoset te një pajisje e re. Do të duhet të konfigurosh një hapësirë tjetër private nëse dëshiron ta përdorësh atë në një pajisje tjetër.\n\nÇdo person që e lidh pajisjen tënde me një kompjuter ose instalon aplikacione të dëmshme në pajisjen tënde mund të jetë në gjendje të qaset te hapësira jote private."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Kur e kyç hapësirën tënde, aplikacionet në hapësirën tënde private ndalojnë dhe nuk do të marrësh njoftime nga ato.\n\nAplikacionet në hapësirën tënde private nuk do të shfaqen në menaxherin e lejeve, panelin e privatësisë dhe cilësimet e tjera kur hapësira jote private është e kyçur.\n\nHapësira jote private nuk mund të restaurohet te një pajisje e re. Do të duhet të konfigurosh një hapësirë tjetër nëse dëshiron ta përdorësh atë në një pajisje tjetër.\n\nÇdo person që e lidh pajisjen tënde me një kompjuter ose instalon aplikacione keqdashëse në pajisjen tënde mund të jetë në gjendje që të qaset në hapësirën tënde private."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Mëso më shumë rreth hapësirës private"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Kjo do të zgjasë disa minuta"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Hapësira private po konfigurohet…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Mund të caktosh një kyçje të re vetëm për hapësirën private ose mund të përdorësh të njëjtën kyçje që përdor për të shkyçur pajisjen tënde"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Përdor kyçjen e ekranit"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Zgjidh një kyçje të re"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Vetëm një sekondë…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Plotësisht gati!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Për të gjetur hapësirën tënde private, shko te lista e aplikacioneve dhe më pas lëviz poshtë"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"U krye"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Cakto një PIN për hapësirën private"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Cakto fjalëkalim për hapësirën private"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Cakto motiv për hapësirën private"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Krijo një \"Llogari të Google\" për të ndihmuar t\'i mbash private të dhënat e tua"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"Në ekranin tjetër mund të identifikohesh në një llogari për ta përdorur me hapësirën tënde private"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Krijo një llogari të posaçme për të ndihmuar në ndalimin e shfaqjes së të dhënave jashtë hapësirës private, si p.sh.:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Fotografitë, skedarët, email-et, kontaktet, ngjarjet e kalendarit dhe të dhëna të tjera të sinkronizuara"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Historiku i shkarkimit të aplikacioneve dhe rekomandimet"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Historiku i shfletimit, faqeshënuesit dhe fjalëkalimet e ruajtura"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Përmbajtjet e sugjeruara në lidhje me aktivitetin tënd në aplikacionet e hapësirës private"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"E kuptova"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Kyç"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Fshih"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Mund të shtosh deri në <xliff:g id="COUNT">%d</xliff:g> gjurmë gishtash"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Certfiikata e sistemit"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Gozhdimi i certfiikatave"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Detajet e rrjetit"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Ky rrjet përdor një protokoll më të vjetër të sigurisë të quajtur WEP, i cili është më pak i sigurt"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Maska e nënrrjetit"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Emri i serverit"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Lloji"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Adresa MAC e Wi‑Fi të pajisjes"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Adresa e Bluetooth-it"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"Numri i serisë"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"Koha aktive"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"Data e prodhimit"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"Data e përdorimit për herë të parë"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"Numri i cikleve"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Trokitja poshtë djathtas"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Trokit te këndi poshtë djathtas i bllokut me prekje për më shumë opsione"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Shpejtësia e treguesit"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Mëso gjestet e bllokut me prekje"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"blloku i prekjes, bllok i prekjes, miu, kursori, lëviz, rrëshqit shpejt, kliko më të djathtin, kliko, treguesi"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"kliko me të djathtin, trokit"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Shto një kalendar"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Përdor kalendarin tënd"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Orari"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Orari"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Vendose telefonin në heshtje në kohë të caktuara"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Cakto rregullat për \"Mos shqetëso\""</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Ndrysho vetëm tek alarmet për një orë deri në {time}}other{Ndrysho vetëm tek alarmet për # orë deri në {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Ndrysho në gjendjen \"vetëm alarmet\" deri në <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Ndrysho te \"ndërprit gjithmonë\""</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Paralajmërim"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Mbyll"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Dërgo komente për këtë pajisje"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Majtas"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Djathtas"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Kasa"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Bateria"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Paneli i \"Cilësimeve\""</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Detyro \"modalitetin e desktopit\""</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Detyro \"modalitetin e desktopit\" eksperimental në ekrane dytësore"</string>
