--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Откажи"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Не сада"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Прихватам"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Више"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Откључајте помоћу лица"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Имајте на уму"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Откључавајте телефон или одобравајте куповине помоћу отиска прста.\n\nНапомена: Не можете да откључавате овај уређај помоћу отиска прста. Више информација затражите од администратора организације."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Откажи"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Не сада"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Прихватам"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Прескачете отиске прстију?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Подешавање отисака прстију траје свега минут-два. Ако прескочите ово, можете да додате отисак прста касније у подешавањима."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Сваки пут кад се уређај закључа"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 минута после гашења екрана"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Само после рестартовања уређаја"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Ако за приватан простор користите друго закључавање, можда ћете морати да потврдите идентитет да бисте отворили апликације у њему."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Сакријте приватан простор"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Сакриј приватан простор када је закључан"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Приватан простор можете да сакријете на листи апликација како други не би знали да га имате на уређају"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Подеси"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Приватни простор"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Сакријте или закључајте приватне апликације у засебном простору. Користите наменски Google налог ради додатне безбедности."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Принцип рада"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Направите Google налог за простор"</b>\n"Ако користите наменски налог, спречавате да се синхронизовани фајлови, слике и имејлови приказују изван простора"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Подесите закључавање"</b>\n"Закључајте простор да други не би могли да га отворе"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Инсталирајте апликације"</b>\n"Апликације за које желите да буду приватне инсталирајте у простору"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Имајте на уму"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Апликације се заустављају када закључате простор"</b>\n"Када закључате простор, апликације у њему се заустављају и не шаљу вам обавештења"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Кад је приватни простор закључан, апликације у њему се неће приказивати у менаџеру дозвола, на контролној табли за приватност ни у другим подешавањима.\n\nПриватни простор не можете да преместите на нови уређај. Морате да подесите други приватни простор ако желите да га користите на другом уређају.\n\nСвако ко ваш уређај повеже са рачунаром или на њега инсталира штетне апликације моћи ће да приступи вашем приватном простору."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"Када закључате простор, апликације у њему се заустављају и не шаљу вам обавештења.\n\nКада је приватни простор закључан, апликације у њему се не приказују у менаџеру дозвола, на контролној табли за приватност ни у другим подешавањима.\n\nПриватни простор не можете да вратите на нови уређај. Морате да подесите други простор ако желите да га користите на другом уређају.\n\nСвако ко ваш уређај повеже са рачунаром или на њега инсталира злонамерне апликације моћи ће да приступи вашем приватном простору."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Сазнајте више о приватном простору"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Потрајаће неколико тренутака"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Подешава се приватни простор…"</string>
@@ -633,7 +624,7 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Можете да подесите ново откључавање само за приватан простор или да користите оно исто које користите за откључавање уређаја"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Користи откључавање екрана"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Одабери нови тип откључавања"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Само тренутак…"</string>
+    <string name="private_space_wait_screen_title" msgid="1535431437075585381">"Само тренутак…"</string>
     <string name="private_space_success_title" msgid="4351904015352046118">"Готово!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Да бисте пронашли приватни простор, отворите листу апликација и скролујте надоле"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Готово"</string>
@@ -647,14 +638,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Подесите PIN за приватни простор"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Подесите лозинку за приватни простор"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Подесите образац за приватни простор"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Отворите наменски Google налог да бисте заштитили приватност података"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"На следећем екрану можете да се пријавите на налог који ћете користити са приватним простором"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Отворите наменски налог како бисте спречили да се изван приватног простора приказују подаци, на пример:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Синхронизоване слике, фајлови, имејлови, контакти, догађаји у календару и други подаци"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Историја преузимања апликације и препоруке"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Историја прегледања, обележивачи и сачуване лозинке"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Предложен садржај повезан са активностима у апликацијама из приватног простора"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"Важи"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Закључај"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Сакриј"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Можете да их додате до <xliff:g id="COUNT">%d</xliff:g>"</string>
@@ -1065,8 +1048,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Сертификат система"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Постављање сертификата"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Детаљи о мрежи"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Ова мрежа користи старији безбедносни протокол звани WEP који је мање сигуран"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Маска подмреже"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Назив сервера"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Тип"</string>
@@ -1938,6 +1920,12 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Додир у доњем десном углу"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Додирните доњи десни угао тачпеда за више опција"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Брзина показивача"</string>
+    <string name="pointer_fill_style" msgid="8413840032931637595">"Стил попуне показивача"</string>
+    <string name="pointer_fill_style_black_button" msgid="4540815366995820960">"Промените стил попуне у црно"</string>
+    <string name="pointer_fill_style_green_button" msgid="3731413496528067979">"Промените стил попуне у зелено"</string>
+    <string name="pointer_fill_style_yellow_button" msgid="5025969961559379024">"Промените стил попуне у жуто"</string>
+    <string name="pointer_fill_style_pink_button" msgid="4106218142489635673">"Промените стил попуне у розе"</string>
+    <string name="pointer_fill_style_blue_button" msgid="5594958078854032785">"Промените стил попуне у плаво"</string>
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Научите покрете за тачпед"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"додирна табла, миш, курсор, скроловање, превлачење, десни клик, клик, показивач"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"десни клик, додир"</string>
@@ -3346,6 +3334,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Додајте календар"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Користите свој календар"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Распоред"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Распоред"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Утишајте телефон у одређено време"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Подесите правила за режим „Не узнемиравај“"</string>
@@ -3810,6 +3804,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Пређите само на аларме на један сат све до {time}}one{Пређите само на аларме на # сат све до {time}}few{Пређите само на аларме на # сата све до {time}}other{Пређите само на аларме на # сати све до {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Пребацује у режим само са алармима до <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Пребацује у режим увек прекидај"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Упозорење"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Затвори"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Шаљи повратне информације о уређају"</string>
@@ -4793,8 +4793,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Лево"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Десно"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Футрола"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Батерија"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Табла са подешавањима"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Наметни режим рачунара"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Намеће експериментални режим рачунара на секундарним екранима"</string>
