--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Avbryt"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"Inte nu"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Jag godkänner"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Mer"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Lås upp med ansiktet"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"Tänk på detta"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"Du kan använda fingeravtrycket för att låsa upp mobilen och godkänna köp.\n\nObs! Du kan inte använda fingeravtrycket för att låsa upp den här enheten. Kontakta organisationens administratör om du vill veta mer."</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"Avbryt"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"Inte nu"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"Jag godkänner"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"Vill du hoppa över fingeravtryck?"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"Det tar bara ett par minuter att konfigurera fingeravtrycket. Hoppar du över det kan du lägga till fingeravtryck i inställningarna senare."</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"Varje gång enheten låses"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"5 minuter efter att skärmen har släckts"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"Endast när enheten har startats om"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"Om du använder ett annat lås för ditt privata område måste du kanske verifiera din identitet för att öppna appar i det privata området."</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"Dölj privat område"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"Dölj privat område när det är låst"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"Du kan dölja ett privat område i applistan så att andra inte vet att du har ett"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"Ställ in"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"Privat område"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"Dölj eller lås privata appar i ett separat område. Använd ett dedikerat Google-konto för extra säkerhet."</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"Så fungerar det"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"Skapa ett Google-konto för ditt privata område"</b>\n"Om du använder ett separat konto förhindrar det att synkroniserade filer, foton och e-postmeddelanden visas utanför det privata området"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"Ställ in ett lås"</b>\n"Lås ditt område så att andra inte kan öppna det"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"Installera appar"</b>\n"Installera appar som du vill hålla privata i området"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"Viktigt att tänka på"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"Appar stoppas när du låser ditt privata område"</b>\n"När du låser ditt privata område stoppas apparna i området och du får inga aviseringar från dem"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"Appar i ditt privata område visas inte i behörighetshanteringen, integritetsöversikten eller andra inställningar när ditt privata område är låst.\n\nDitt privata område kan inte flyttas till en ny enhet. Du måste ställa in ett nytt privat område om du vill använda det på en annan enhet.\n\nAlla som ansluter din enhet till en dator eller installerar skadliga appar på enheten kanske kan få åtkomst till ditt privata område."</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"När du låser ditt privata område stoppas apparna i området och du får inga aviseringar från dem.\n\nAppar i ditt privata område visas inte i behörighetshanteringen, integritetsöversikten eller andra inställningar när det privata området är låst.\n\nDitt privata område kan inte återställas på en ny enhet. Du måste ställa in ett nytt område om du vill använda det på en annan enhet.\n\nOm någon ansluter din enhet till en dator eller installerar skadliga appar på enheten kan det hända att hen får åtkomst till ditt privata område."</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"Läs mer om privat område"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"Detta tar en stund"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"Ställer in privat område …"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"Du kan ställa in ett nytt lås för endast det privata området eller använda samma lås som du har till enheten"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"Använd skärmlås"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"Välj ett nytt lås"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"Ett ögonblick …"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"Klart!"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"Om du vill hitta ditt privata område öppnar du applistan och scrollar nedåt"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"Klar"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"Ställ in pinkod för ditt privata rum"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"Ställ in lösenord för ditt privata rum"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"Ställ in mönster för ditt privata rum"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"Skapa ett Google-konto för att hålla din data privat:"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"På nästa skärm kan du logga in på kontot som du vill använda med ditt privata område"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"Skapa ett dedikerat konto för att förhindra att data visas utanför det privata området, till exempel:"</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"Synkroniserade foton, filer, e-post, kontakter, kalenderhändelser och annan data"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"Rekommendationer och nedladdningshistorik för appar"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"Webbhistorik, bokmärken och sparade lösenord"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"Föreslaget innehåll som rör din aktivitet i appar i det privat området"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"OK"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"Lås"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"Dölj"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Du kan lägga till upp till <xliff:g id="COUNT">%d</xliff:g> fingeravtryck"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"Systemcertifikat"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"Fästa certifikat"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"Nätverksinformation"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"Det här nätverket använder ett äldre säkerhetsprotokoll som kallas WEP och som är mindre säkert"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"Nätmask"</string>
     <string name="server_name_title" msgid="7257095185810299066">"Servernamn"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"Typ"</string>
@@ -1938,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"Tryck längst ned till höger"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"Tryck på det nedre högra hörnet av styrplattan för fler alternativ"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"Markörens hastighet"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"Lär dig rörelser för styrplattan"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"styrplatta, styr platta, mus, markör, scrolla, svep, högerklicka, klicka, pekare"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"högerklicka, tryck"</string>
@@ -3346,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"Lägg till en kalender"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"Använd kalendern"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"Schemalägg"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"Schemalägg"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"Stäng av mobilljud vid vissa tider"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"Ange regler för Stör ej"</string>
@@ -3810,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{Ändra till endast alarm i en timme tills {time}}other{Ändra till endast alarm i # timmar tills {time}}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"Ändra till endast alarm fram till kl. <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"Ändra till avbryt alltid"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"Varning"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"Stäng"</string>
     <string name="device_feedback" msgid="5351614458411688608">"Skicka feedback om den här enheten"</string>
@@ -4793,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"Vänster"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"Höger"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"Fodral"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"Batteri"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"Panelen Inställningar"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"Tvinga fram skrivbordsläge"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"Tvinga fram experimentellt skrivbordsläge på sekundära skärmar"</string>
