--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -312,8 +312,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"取消"</string>
-    <!-- no translation found for security_settings_face_enroll_introduction_no_thanks (6603178409726203187) -->
-    <skip />
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="6603178409726203187">"暫時不要"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"我同意"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"更多"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"使用面孔解鎖"</string>
@@ -374,8 +373,7 @@
     <string name="security_settings_fingerprint_enroll_introduction_footer_title_2" msgid="5663733424583416266">"注意事項"</string>
     <string name="security_settings_fingerprint_enroll_introduction_message_unlock_disabled" msgid="8957789840251747092">"使用指紋解鎖手機或核准購物交易。\n\n請注意：你無法使用指紋解鎖此裝置。如需瞭解詳情，請聯絡你機構的管理員。"</string>
     <string name="security_settings_fingerprint_enroll_introduction_cancel" msgid="6086532316718920562">"取消"</string>
-    <!-- no translation found for security_settings_fingerprint_enroll_introduction_no_thanks (1663906389456119842) -->
-    <skip />
+    <string name="security_settings_fingerprint_enroll_introduction_no_thanks" msgid="1663906389456119842">"暫時不要"</string>
     <string name="security_settings_fingerprint_enroll_introduction_agree" msgid="4068276083536421828">"我同意"</string>
     <string name="setup_fingerprint_enroll_skip_title" msgid="2473807887676247264">"要略過指紋設定程序嗎？"</string>
     <string name="setup_fingerprint_enroll_skip_after_adding_lock_text" msgid="2412645723804450304">"指紋設定程序只需一至兩分鐘。如略過此步驟，你可於稍後在「設定」中加入指紋。"</string>
@@ -579,7 +577,6 @@
     <string name="private_space_auto_lock_every_time" msgid="1215061855836002830">"每當裝置鎖定"</string>
     <string name="private_space_auto_lock_after_inactivity" msgid="7107814517866649733">"螢幕逾時 5 分鐘後"</string>
     <string name="private_space_auto_lock_after_device_restart" msgid="288755768725895029">"只在裝置重新啟動後"</string>
-    <string name="private_space_auto_lock_footer_message" msgid="2752467351969856487">"如果你的私人空間使用其他鎖定方式，系統可能會要求你驗證身分，才能開啟私人空間的應用程式。"</string>
     <string name="private_space_hide_page_title" msgid="3364639176511877414">"隱藏私人空間"</string>
     <string name="private_space_hide_when_locked" msgid="6219472348124151797">"私人空間處於鎖定狀態時，系統會隱藏私人空間"</string>
     <string name="private_space_hide_page_summary" msgid="6247773353685839242">"如要防止其他使用者知道裝置上有私人空間，可以從應用程式清單中隱藏該空間"</string>
@@ -610,20 +607,14 @@
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"設定"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"私人空間"</string>
     <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"在獨立空間隱藏或鎖定私人應用程式。使用專屬的 Google 帳戶，進一步加強安全保障。"</string>
-    <!-- no translation found for private_space_setup_sub_header (550476876393954356) -->
-    <skip />
-    <!-- no translation found for private_space_separate_account_text (790319706810190320) -->
-    <skip />
+    <string name="private_space_setup_sub_header" msgid="550476876393954356">"運作方式"</string>
+    <string name="private_space_separate_account_text" msgid="790319706810190320"><b>"為你的私人空間建立 Google 帳戶"</b>\n"使用專屬帳戶有助防止已同步的檔案、相片和電郵在私人空間以外的空間顯示"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"設定鎖定方式"</b>\n"鎖定私人空間，以防止其他人開啟"</string>
-    <!-- no translation found for private_space_install_apps_text (8072027796190028830) -->
-    <skip />
-    <!-- no translation found for private_space_keep_in_mind_text (7721081172657563800) -->
-    <skip />
-    <!-- no translation found for private_space_apps_stopped_text (4034574118911250169) -->
-    <skip />
+    <string name="private_space_install_apps_text" msgid="8072027796190028830"><b>"安裝應用程式"</b>\n"在私人空間中安裝你想設定為私人的應用程式"</string>
+    <string name="private_space_keep_in_mind_text" msgid="7721081172657563800">"注意事項"</string>
+    <string name="private_space_apps_stopped_text" msgid="4034574118911250169"><b>"應用程式在私人空間鎖定後停止運作"</b>\n"私人空間鎖定後，當中的應用程式會停止運作，因此你不會收到這些應用程式的通知"</string>
     <string name="private_space_apps_permission_text" msgid="7030946025253366172">"私人空間處於鎖定狀態時，當中的應用程式就不會在權限管理工具、私隱資訊主頁和其他設定中顯示。\n\n私人空間無法轉移至新裝置。如要在其他裝置上使用私人空間，請重新設定。\n\n如果有人將裝置連接電腦，或在裝置上安裝有害的應用程式，或許能存取你的私人空間。"</string>
-    <!-- no translation found for private_space_settings_footer_text (4877745497351782272) -->
-    <skip />
+    <string name="private_space_settings_footer_text" msgid="4877745497351782272">"私人空間鎖定後，當中的應用程式會停止運作，因此你不會收到這些應用程式的通知。\n\n私人空間鎖定時，當中的應用程式不會在權限管理工具、私隱資訊主頁和其他設定中顯示。\n\n你無法將私人空間還原至新裝置。如要在其他裝置上使用私人空間，請重新設定。\n\n如果有人將裝置連接電腦，或在裝置上安裝惡意應用程式，或許可存取你的私人空間。"</string>
     <string name="private_space_learn_more_text" msgid="5314198983263277586">"進一步瞭解私人空間"</string>
     <string name="private_space_few_moments_text" msgid="7166883272914424011">"過程需時數分鐘"</string>
     <string name="private_space_setting_up_text" msgid="8458035555212009528">"正在設定私人空間…"</string>
@@ -633,7 +624,8 @@
     <string name="private_space_lockscreen_summary" msgid="3053836076639653805">"你可專為私人空間設定新的鎖定方式，或者使用解鎖裝置的同一個鎖定方式"</string>
     <string name="private_space_use_screenlock_label" msgid="9182153443192032782">"使用螢幕鎖定方式"</string>
     <string name="private_space_set_lock_label" msgid="1790408277477408475">"選擇新的鎖定方式"</string>
-    <string name="private_space_pre_finish_title" msgid="2314776598615113267">"請稍候…"</string>
+    <!-- no translation found for private_space_wait_screen_title (1535431437075585381) -->
+    <skip />
     <string name="private_space_success_title" msgid="4351904015352046118">"大功告成！"</string>
     <string name="private_space_access_text" msgid="4433988836344567888">"如要存取私人空間，請前往應用程式清單並向下捲動畫面"</string>
     <string name="private_space_done_label" msgid="1020482651595246071">"完成"</string>
@@ -647,14 +639,6 @@
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"設定私人空間的 PIN"</string>
     <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"設定私人空間密碼"</string>
     <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"設定私人空間上鎖圖案"</string>
-    <string name="private_space_gaia_education_title" msgid="3787414895669666563">"建立 Google 帳戶有助將你的資料保密"</string>
-    <string name="private_space_gaia_education_description" msgid="1592753570023264559">"在下一個畫面中，你可以登入用於私人空間的帳戶"</string>
-    <string name="private_space_gaia_education_header" msgid="7835879839637613495"><b>"建立專屬帳戶，防止資料出現在私人空間外，例如："</b></string>
-    <string name="private_space_gaia_education_bullet1" msgid="641701340908301992">"已同步的相片、檔案、電郵、聯絡人、日曆活動和其他資料"</string>
-    <string name="private_space_gaia_education_bullet2" msgid="3679859681253672976">"應用程式下載記錄和建議"</string>
-    <string name="private_space_gaia_education_bullet3" msgid="1703614225321289717">"瀏覽記錄、書籤和已儲存的密碼"</string>
-    <string name="private_space_gaia_education_bullet4" msgid="515761604505366164">"與私人空間應用程式活動相關的建議內容"</string>
-    <string name="private_space_gaia_education_got_it" msgid="7824029819615566806">"知道了"</string>
     <string name="private_space_category_lock" msgid="1917657024358778169">"鎖定"</string>
     <string name="private_space_category_hide" msgid="3236587591523126649">"隱藏"</string>
     <string name="fingerprint_add_max" msgid="8639321019299347447">"你最多可以加入 <xliff:g id="COUNT">%d</xliff:g> 個指紋"</string>
@@ -1065,8 +1049,7 @@
     <string name="wifi_certificate_summary_system" msgid="6521297326433133669">"系統憑證"</string>
     <string name="wifi_certificate_summary_pinning" msgid="5901067790901727957">"憑證綁定"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"網絡詳細資料"</string>
-    <!-- no translation found for wep_network_less_secure_warning_title (2118823633436946728) -->
-    <skip />
+    <string name="wep_network_less_secure_warning_title" msgid="2118823633436946728">"此網絡使用較舊的安全通訊協定 (WEP)，安全性較低"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"子網絡遮罩"</string>
     <string name="server_name_title" msgid="7257095185810299066">"伺服器名稱"</string>
     <string name="wifi_type_title" msgid="2174893488722015838">"類型"</string>
@@ -1384,8 +1367,7 @@
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"裝置 Wi-Fi MAC 位址"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"藍牙位址"</string>
     <string name="status_serial_number" msgid="9060064164331466789">"序號"</string>
-    <!-- no translation found for status_up_time (4250719389455342087) -->
-    <skip />
+    <string name="status_up_time" msgid="4250719389455342087">"運行時間"</string>
     <string name="battery_manufacture_date" msgid="7139426520156833987">"製造日期"</string>
     <string name="battery_first_use_date" msgid="3157207331722711317">"首次使用日期"</string>
     <string name="battery_cycle_count" msgid="2912949283386571900">"週期數"</string>
@@ -1939,6 +1921,18 @@
     <string name="trackpad_bottom_right_tap_title" msgid="6275428879042702880">"輕按右下角"</string>
     <string name="trackpad_bottom_right_tap_summary" msgid="8734094086900680674">"輕按觸控板右下角，即可查看更多選項"</string>
     <string name="trackpad_pointer_speed" msgid="7786579408631352625">"游標速度"</string>
+    <!-- no translation found for pointer_fill_style (8413840032931637595) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_black_button (4540815366995820960) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_green_button (3731413496528067979) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_yellow_button (5025969961559379024) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_pink_button (4106218142489635673) -->
+    <skip />
+    <!-- no translation found for pointer_fill_style_blue_button (5594958078854032785) -->
+    <skip />
     <string name="trackpad_touch_gesture" msgid="8641725062131922497">"學習觸控板手勢"</string>
     <string name="keywords_touchpad" msgid="8159846254066666032">"觸控板, 滑鼠, 鼠標, 捲動, 輕掃, 按一下右鍵, 點擊, 游標"</string>
     <string name="keywords_trackpad_bottom_right_tap" msgid="1285062446073929305">"按一下右鍵, 輕按"</string>
@@ -3347,6 +3341,12 @@
     <string name="zen_mode_set_calendar_title" msgid="7216665046452644450">"新增日曆"</string>
     <string name="zen_mode_set_calendar_link" msgid="5694504696975898068">"使用日曆"</string>
     <string name="zen_mode_set_calendar_category_title" msgid="4860286061420133360">"時間表"</string>
+    <!-- no translation found for zen_mode_set_schedule_title (8023100831320026233) -->
+    <skip />
+    <!-- no translation found for zen_mode_set_schedule_link (2534032127923435737) -->
+    <skip />
+    <!-- no translation found for zen_mode_schedule_duration (299332195675875111) -->
+    <skip />
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"預定時間"</string>
     <string name="zen_mode_automation_suggestion_title" msgid="7776129050500707960">"在特定時間將手機設為靜音"</string>
     <string name="zen_mode_automation_suggestion_summary" msgid="1946750790084170826">"設定「請勿騷擾」規則"</string>
@@ -3811,6 +3811,12 @@
     <string name="zen_mode_summary_alarms_only_by_hour" msgid="7400910210950788163">"{count,plural, =1{改為只限鬧鐘模式同埋持續 1 個鐘，直至 {time} 為止}other{改為只限鬧鐘模式同埋持續 # 個鐘，直至 {time} 為止}}"</string>
     <string name="zen_mode_summary_alarms_only_by_time" msgid="8140619669703968810">"響 <xliff:g id="FORMATTEDTIME">%1$s</xliff:g>前改為只允許鬧鐘"</string>
     <string name="zen_mode_summary_always" msgid="722093064250082317">"變更為永遠允許干擾"</string>
+    <!-- no translation found for zen_mode_action_change_name (766639614789907016) -->
+    <skip />
+    <!-- no translation found for zen_mode_action_change_icon (6192187791750301778) -->
+    <skip />
+    <!-- no translation found for zen_mode_icon_picker_title (6845490379143557472) -->
+    <skip />
     <string name="warning_button_text" msgid="1274234338874005639">"警告"</string>
     <string name="suggestion_button_close" msgid="6865170855573283759">"關閉"</string>
     <string name="device_feedback" msgid="5351614458411688608">"傳送你對這部裝置的意見"</string>
@@ -4794,8 +4800,7 @@
     <string name="bluetooth_left_name" msgid="7440064067910080502">"左耳"</string>
     <string name="bluetooth_right_name" msgid="7588088072444124949">"右耳"</string>
     <string name="bluetooth_middle_name" msgid="3909371955137442319">"耳機盒"</string>
-    <!-- no translation found for bluetooth_header_battery_content_description (3804237436331504879) -->
-    <skip />
+    <string name="bluetooth_header_battery_content_description" msgid="3804237436331504879">"電池"</string>
     <string name="settings_panel_title" msgid="346363079938069215">"設定面板"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"強制執行桌面模式"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"在次要顯示屏強制執行實驗版桌面模式"</string>
